--- a/data/rush/15942.yaml
+++ b/data/rush/15942.yaml
@@ -60,6 +60,10 @@ sets:
     set_name: Maximum Ultra Enhancement Pack
     rarities:
     - Secret Rare
+  - set_number: RD/B234-JP010
+    set_name: Battle Pack 2023 Vol.4
+    rarities:
+    - Common
   ko:
   - set_number: RD/MAX1-KR048
     set_name: Maximum Ultra Enhancement Pack
