--- a/data/rush/17290.yaml
+++ b/data/rush/17290.yaml
@@ -55,6 +55,10 @@ sets:
     set_name: 'Deck Mod Pack: Genesis Master Road!!'
     rarities:
     - Super Rare
+  - set_number: RD/B234-JP007
+    set_name: Battle Pack 2023 Vol.4
+    rarities:
+    - Common
   ko:
   - set_number: RD/KP08-KR014
     set_name: 'Deck Mod Pack: Genesis Master Road!!'
