--- a/data/rush/17525.yaml
+++ b/data/rush/17525.yaml
@@ -71,6 +71,11 @@ sets:
     set_name: 'Deck Mod Pack: Galaxy of Fate!!'
     rarities:
     - Common
+  - set_number: RD/B234-JP004
+    set_name: Battle Pack 2023 Vol.4
+    rarities:
+    - Common
+    - Super Rare
   ko:
   - set_number: RD/KP09-KR039
     set_name: 'Deck Mod Pack: Galaxy of Fate!!'
