--- a/data/rush/18704.yaml
+++ b/data/rush/18704.yaml
@@ -52,6 +52,12 @@ sets:
     set_name: Legend Awakening Pack
     rarities:
     - Rare
+  - set_number: RD/B234-JP001
+    set_name: Battle Pack 2023 Vol.4
+    rarities:
+    - Common
+    - Super Rare
+    - Ultra Rare
   ko:
   - set_number: RD/LGP1-KR028
     set_name: Legend Awakening Pack
