--- a/data/rush/19329.yaml
+++ b/data/rush/19329.yaml
@@ -51,6 +51,11 @@ sets:
     set_name: Phoenix of the Roaring Flame
     rarities:
     - Rare
+  - set_number: RD/B234-JP005
+    set_name: Battle Pack 2023 Vol.4
+    rarities:
+    - Common
+    - Super Rare
 is_translation_unofficial:
   name:
     en: true
