--- a/data/rush/15663.yaml
+++ b/data/rush/15663.yaml
@@ -66,6 +66,10 @@ sets:
     rarities:
     - Ultra Rare
     - Secret Rare
+  - set_number: RD/B234-JP008
+    set_name: Battle Pack 2023 Vol.4
+    rarities:
+    - Common
   ko:
   - set_number: RD/CP01-KR015
     set_name: Character Pack - Gavin/Roa/Romin
