--- a/data/rush/16785.yaml
+++ b/data/rush/16785.yaml
@@ -61,6 +61,11 @@ sets:
     set_name: Megaroad Pack
     rarities:
     - Common
+  - set_number: RD/B234-JP003
+    set_name: Battle Pack 2023 Vol.4
+    rarities:
+    - Common
+    - Super Rare
   ko:
   - set_number: RD/SBD4-KR012
     set_name: Strongest Battle Deck Romin - Psychic Beat
