--- a/data/rush/17328.yaml
+++ b/data/rush/17328.yaml
@@ -53,6 +53,10 @@ sets:
     set_name: 'Deck Mod Pack: Genesis Master Road!!'
     rarities:
     - Super Rare
+  - set_number: RD/B234-JP009
+    set_name: Battle Pack 2023 Vol.4
+    rarities:
+    - Common
   ko:
   - set_number: RD/KP08-KR051
     set_name: 'Deck Mod Pack: Genesis Master Road!!'
