--- a/data/rush/18603.yaml
+++ b/data/rush/18603.yaml
@@ -57,6 +57,11 @@ sets:
     set_name: 'Deck Mod Pack: Double Star of the Assault!!'
     rarities:
     - Rare
+  - set_number: RD/B234-JP002
+    set_name: Battle Pack 2023 Vol.4
+    rarities:
+    - Common
+    - Super Rare
   ko:
   - set_number: RD/KP12-KR021
     set_name: 'Deck Mod Pack: Double Star of the Assault!!'
