--- a/rush.yaml
+++ b/rush.yaml
@@ -12982,6 +12982,10 @@ sets:
     rarities:
     - Ultra Rare
     - Secret Rare
+  - set_number: RD/B234-JP008
+    set_name: Battle Pack 2023 Vol.4
+    rarities:
+    - Common
   ko:
   - set_number: RD/CP01-KR015
     set_name: Character Pack - Gavin/Roa/Romin
@@ -21838,6 +21842,10 @@ sets:
     set_name: Maximum Ultra Enhancement Pack
     rarities:
     - Secret Rare
+  - set_number: RD/B234-JP010
+    set_name: Battle Pack 2023 Vol.4
+    rarities:
+    - Common
   ko:
   - set_number: RD/MAX1-KR048
     set_name: Maximum Ultra Enhancement Pack
@@ -42462,6 +42470,11 @@ sets:
     set_name: Megaroad Pack
     rarities:
     - Common
+  - set_number: RD/B234-JP003
+    set_name: Battle Pack 2023 Vol.4
+    rarities:
+    - Common
+    - Super Rare
   ko:
   - set_number: RD/SBD4-KR012
     set_name: Strongest Battle Deck Romin - Psychic Beat
@@ -56213,6 +56226,10 @@ sets:
     set_name: 'Deck Mod Pack: Genesis Master Road!!'
     rarities:
     - Super Rare
+  - set_number: RD/B234-JP007
+    set_name: Battle Pack 2023 Vol.4
+    rarities:
+    - Common
   ko:
   - set_number: RD/KP08-KR014
     set_name: 'Deck Mod Pack: Genesis Master Road!!'
@@ -59010,6 +59027,10 @@ sets:
     set_name: 'Deck Mod Pack: Genesis Master Road!!'
     rarities:
     - Super Rare
+  - set_number: RD/B234-JP009
+    set_name: Battle Pack 2023 Vol.4
+    rarities:
+    - Common
   ko:
   - set_number: RD/KP08-KR051
     set_name: 'Deck Mod Pack: Genesis Master Road!!'
@@ -63093,6 +63114,11 @@ sets:
     set_name: 'Deck Mod Pack: Galaxy of Fate!!'
     rarities:
     - Common
+  - set_number: RD/B234-JP004
+    set_name: Battle Pack 2023 Vol.4
+    rarities:
+    - Common
+    - Super Rare
   ko:
   - set_number: RD/KP09-KR039
     set_name: 'Deck Mod Pack: Galaxy of Fate!!'
@@ -93056,6 +93082,11 @@ sets:
     set_name: 'Deck Mod Pack: Double Star of the Assault!!'
     rarities:
     - Rare
+  - set_number: RD/B234-JP002
+    set_name: Battle Pack 2023 Vol.4
+    rarities:
+    - Common
+    - Super Rare
   ko:
   - set_number: RD/KP12-KR021
     set_name: 'Deck Mod Pack: Double Star of the Assault!!'
@@ -98609,6 +98640,12 @@ sets:
     set_name: Legend Awakening Pack
     rarities:
     - Rare
+  - set_number: RD/B234-JP001
+    set_name: Battle Pack 2023 Vol.4
+    rarities:
+    - Common
+    - Super Rare
+    - Ultra Rare
   ko:
   - set_number: RD/LGP1-KR028
     set_name: Legend Awakening Pack
@@ -114315,6 +114352,11 @@ sets:
     set_name: Phoenix of the Roaring Flame
     rarities:
     - Rare
+  - set_number: RD/B234-JP005
+    set_name: Battle Pack 2023 Vol.4
+    rarities:
+    - Common
+    - Super Rare
 is_translation_unofficial:
   name:
     en: true
