--- a/data/rush/19784.yaml
+++ b/data/rush/19784.yaml
@@ -40,7 +40,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    If the equipped monster attacks a Defense Position monster, inflict piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference). If you have a face-down Spell/Trap Card on your field, you take no damage from your opponent's card effects. If you have 2 or more face-down Spell/Trap Cards on your field, the equipped monster cannot be destroyed by card effects.
+    If the equipped monster attacks a Defense Position monster, inflict piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference). If you have a face-down Spell/Trap Card on your field, you take no effect damage from your opponent. If you have 2 or more face-down Spell/Trap Cards on your field, the equipped monster cannot be destroyed by card effects.
   de:
   es:
   fr:
