--- a/rush.yaml
+++ b/rush.yaml
@@ -104527,7 +104527,7 @@ effect_types:
 - Continuous
 effect:
   en: |-
-    You take no damage from your opponent's card effects during their Main Phase only.
+    During your opponent's Main Phase, you take no effect damage from your opponent.
   de:
   es:
   fr:
@@ -104559,11 +104559,6 @@ sets:
     set_name: Oblivion of the Flash
     rarities:
     - Common
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 932086
 ---
 konami_id: 18959
@@ -126741,7 +126736,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    If the equipped monster attacks a Defense Position monster, inflict piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference). If you have a face-down Spell/Trap Card on your field, you take no damage from your opponent's card effects. If you have 2 or more face-down Spell/Trap Cards on your field, the equipped monster cannot be destroyed by card effects.
+    If the equipped monster attacks a Defense Position monster, inflict piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference). If you have a face-down Spell/Trap Card on your field, you take no effect damage from your opponent. If you have 2 or more face-down Spell/Trap Cards on your field, the equipped monster cannot be destroyed by card effects.
   de:
   es:
   fr:
@@ -129108,3 +129103,52 @@ is_translation_unofficial:
   text:
     en: true
 yugipedia_page_id: 1035217
+---
+konami_id:
+name:
+  en: Zero Drake
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ゼロ・ドレイク
+  ja_romaji: Zero Doreiku
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+text:
+  en: |-
+    New encounters, new adventures, a new world. A new road for the dragon whelp that turns zero into one.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: |-
+    新たな出会い、新たな冒険、新たな世界。ゼロをイチにする子竜の旅路。
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Dragon / Normal
+attribute: WATER
+level: 1
+atk: 0
+def: 1500
+images:
+- index: 1
+  image: ZeroDrake-RDB234-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/B234-JP006
+    set_name: Battle Pack 2023 Vol.4
+    rarities:
+    - Common
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1035624
