--- a/data/cards/32807846.yaml
+++ b/data/cards/32807846.yaml
@@ -45,6 +45,7 @@ images:
   illustration: ReinforcementoftheArmy-CA-2.png
 - index: 3
   image: ReinforcementoftheArmy-ART1-JP-OP.png
+  illustration: ReinforcementoftheArmy-CA-3.png
 sets:
   en:
   - set_number: LOD-EN028
