--- a/data/rush/19666.yaml
+++ b/data/rush/19666.yaml
@@ -27,7 +27,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    You take no damage from your opponent's Trap Card effects this turn. Then, you can add 1 Winged Beast Type monster with 2200 ATK from your Graveyard to your hand.
+    You take no effect damage from your opponent's Trap Cards this turn. Then, you can add 1 Winged Beast Type monster with 2200 ATK from your Graveyard to your hand.
   de:
   es:
   fr:
