--- a/data/rush/17013.yaml
+++ b/data/rush/17013.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    While this card is face-up in the Field Zone, face-up FIRE Attribute monsters on your field gain 400 ATK during your turn only, and face-up FIRE Attribute monsters on your opponent's field gain 400 ATK during their turn only.
+    While this card is face-up in the Field Zone, during your turn, face-up FIRE Attribute monsters on your field gain 400 ATK, and during your opponent's turn, face-up FIRE Attribute monsters on your opponent's field gain 400 ATK.
   de:
   es:
   fr:
