--- a/data/rush/18942.yaml
+++ b/data/rush/18942.yaml
@@ -30,7 +30,7 @@ effect_types:
 - Continuous
 effect:
   en: |-
-    If a card is in your Spell & Trap Zone, this card gains 200 ATK, also this Attack Position card cannot be destroyed by battle during your opponent's turn only.
+    If a card is in your Spell & Trap Zone, this card gains 200 ATK, also during your opponent's turn, this Attack Position card cannot be destroyed by battle.
   de:
   es:
   fr:
