--- a/rush.yaml
+++ b/rush.yaml
@@ -51227,7 +51227,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    While this card is face-up in the Field Zone, face-up FIRE Attribute monsters on your field gain 400 ATK during your turn only, and face-up FIRE Attribute monsters on your opponent's field gain 400 ATK during their turn only.
+    While this card is face-up in the Field Zone, during your turn, face-up FIRE Attribute monsters on your field gain 400 ATK, and during your opponent's turn, face-up FIRE Attribute monsters on your opponent's field gain 400 ATK.
   de:
   es:
   fr:
@@ -103345,7 +103345,7 @@ effect_types:
 - Continuous
 effect:
   en: |-
-    If a card is in your Spell & Trap Zone, this card gains 200 ATK, also this Attack Position card cannot be destroyed by battle during your opponent's turn only.
+    If a card is in your Spell & Trap Zone, this card gains 200 ATK, also during your opponent's turn, this Attack Position card cannot be destroyed by battle.
   de:
   es:
   fr:
@@ -106192,7 +106192,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    The equipped monster cannot be destroyed by Spell Card effects, and gains 800 ATK during your turn only.
+    The equipped monster cannot be destroyed by Spell Card effects, and during your turn, gains 800 ATK.
   de:
   es:
   fr:
@@ -112380,7 +112380,7 @@ effect_types:
 - Continuous
 effect:
   en: |-
-    This card gains ATK equal to [the number of Level 10 or higher Sea Serpent Type monsters in your Graveyard] x 500. Also, if you have 3 or more Level 10 or higher Sea Serpent Type monsters in your Graveyard, this card cannot be destroyed by your opponent's card effects during their turn only.
+    This card gains ATK equal to [the number of Level 10 or higher Sea Serpent Type monsters in your Graveyard] x 500. Also, if you have 3 or more Level 10 or higher Sea Serpent Type monsters in your Graveyard, during your opponent's turn, this card cannot be destroyed by your opponent's card effects.
   de:
   es:
   fr:
