--- a/data/cards/yugipedia1035123.yaml
+++ b/data/cards/yugipedia1035123.yaml
@@ -32,6 +32,7 @@ attribute: LIGHT
 level: 10
 atk: 3000
 def: 3000
+materials: '"Judgment Dragon" + "Punishment Dragon"'
 images:
 - index: 1
   image: EnlightenmentDragon-LEDE-JP-OP.png
