--- a/data/cards/yugipedia1035125.yaml
+++ b/data/cards/yugipedia1035125.yaml
@@ -32,6 +32,7 @@ attribute: LIGHT
 level: 8
 atk: 2800
 def: 1800
+materials: 1 Tuner + 1 or more non-Tuner monsters
 series:
 - Lightsworn
 images:
