--- a/data/rush/18683.yaml
+++ b/data/rush/18683.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Until the end of the opponent's next turn, while this card is face-up, neither player can activate the effects of face-up Level 4 or lower monsters.
+    Until the end of your opponent's next turn, while this card is face-up, neither player can activate the effects of face-up Level 4 or lower monsters.
   de:
   es:
   fr:
