--- a/rush.yaml
+++ b/rush.yaml
@@ -97129,7 +97129,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Until the end of the opponent's next turn, while this card is face-up, neither player can activate the effects of face-up Level 4 or lower monsters.
+    Until the end of your opponent's next turn, while this card is face-up, neither player can activate the effects of face-up Level 4 or lower monsters.
   de:
   es:
   fr:
@@ -99742,7 +99742,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This card gains 600 ATK until the end of this turn. Then, if this card is in Maximum Mode, it cannot be destroyed by your opponent's card effects until the end of their next turn.
+    This card gains 600 ATK until the end of this turn. Then, if this card is in Maximum Mode, it cannot be destroyed by your opponent's card effects until the end of your opponent's next turn.
   de:
   es:
   fr:
@@ -108660,7 +108660,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    1 face-up monster on your opponent's field loses 2000 ATK/DEF until the end of their next turn. Then, if you placed "Straight Pierce" or "Fusion" to meet the requirement, you can draw 1 card.
+    1 face-up monster on your opponent's field loses 2000 ATK/DEF until the end of your opponent's next turn. Then, if you placed "Straight Pierce" or "Fusion" to meet the requirement, you can draw 1 card.
   de:
   es:
   fr:
@@ -113128,7 +113128,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Send the top 2 cards of your Deck to the Graveyard. Then, if you have "Negate Attack" in your Graveyard, you can make up to 3 face-up monsters on your opponent's field lose 2000 ATK until the end of their next turn.
+    Send the top 2 cards of your Deck to the Graveyard. Then, if you have "Negate Attack" in your Graveyard, you can make up to 3 face-up monsters on your opponent's field lose 2000 ATK until the end of your opponent's next turn.
   de:
   es:
   fr:
@@ -117359,7 +117359,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    1 face-down Spell/Trap Card on your opponent's field cannot be activated until the end of their next turn.
+    1 face-down Spell/Trap Card on your opponent's field cannot be activated until the end of your opponent's next turn.
   de:
   es:
   fr:
@@ -123779,7 +123779,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This card cannot be destroyed by your opponent's card effects until the end of their next turn. Then, if you have 2 or more "Meteor Flare Fusion" in your Graveyard, inflict 500 damage to your opponent.
+    This card cannot be destroyed by your opponent's card effects until the end of your opponent's next turn. Then, if you have 2 or more "Meteor Flare Fusion" in your Graveyard, inflict 500 damage to your opponent.
   de:
   es:
   fr:
@@ -126311,7 +126311,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This card gains 1600 ATK until the end of your opponent's next turn. Then, if you have "Abysskite Party" in your Graveyard, this card cannot be destroyed by your opponent's card effects until the end of their next turn.
+    This card gains 1600 ATK until the end of your opponent's next turn. Then, if you have "Abysskite Party" in your Graveyard, this card cannot be destroyed by your opponent's card effects until the end of your opponent's next turn.
   de:
   es:
   fr:
@@ -126454,7 +126454,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This card gains ATK equal to [the total Levels of the monsters sent to the Graveyard to meet the requirement] x 100 until the end of your opponent's next turn. Then, if you sent 3 monsters with different Types to the Graveyard to meet the requirement, this card cannot be destroyed by your opponent's card effects until the end of their next turn.
+    This card gains ATK equal to [the total Levels of the monsters sent to the Graveyard to meet the requirement] x 100 until the end of your opponent's next turn. Then, if you sent 3 monsters with different Types to the Graveyard to meet the requirement, this card cannot be destroyed by your opponent's card effects until the end of your opponent's next turn.
   de:
   es:
   fr:
@@ -128660,7 +128660,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This card gains 900 ATK until the end of your opponent's next turn. Then, if you sent a LIGHT Attribute or DARK Attribute monster to the Graveyard to meet the requirement, you can make all face-up monsters on your opponent's field lose 1000 ATK until the end of their next turn.
+    This card gains 900 ATK until the end of your opponent's next turn. Then, if you sent a LIGHT Attribute or DARK Attribute monster to the Graveyard to meet the requirement, you can make all face-up monsters on your opponent's field lose 1000 ATK until the end of your opponent's next turn.
   de:
   es:
   fr:
