--- a/data/cards/06128460.yaml
+++ b/data/cards/06128460.yaml
@@ -8,7 +8,7 @@ name:
   it: Spettrocottura
   pt: Cozinheiro Inumano
   ja: ワイトベイキング
-  ja_romaji: Waito Beikingu
+  ja_romaji: Waitobeikingu
   ko: 저주받은 하인 베이킹
   ko_rr: Jeojubat-eun Ha-in Beiking
   zh-TW:
