--- a/data/cards/91228233.yaml
+++ b/data/cards/91228233.yaml
@@ -7,7 +7,7 @@ name:
   fr: Forêt des Fleurs Perdues
   it: Foresta dei Fiori Perduti
   pt: Floresta das Flores Perdidas
-  ja: <ruby>迷<rt>まよ</rt></ruby>い<ruby>花<rt>はな</rt></ruby>の<ruby>森<rt>もり</rt></ruby>
+  ja: <ruby>迷<rt>まよ</rt></ruby>い<ruby>花<rt>ばな</rt></ruby>の<ruby>森<rt>もり</rt></ruby>
   ja_romaji: Mayoi Hana no Mori
   ko: 방황의 꽃의 숲
   ko_rr: Banghwang-ui Ttot-ui Sup
