--- a/data/cards/03648368.yaml
+++ b/data/cards/03648368.yaml
@@ -7,7 +7,7 @@ name:
   fr: Patrouilleur, Allié de la Justice
   it: Ricercatore Alleato della Giustizia
   pt: Examinador, Aliado da Justiça
-  ja: <ruby>Ａ・Ｏ・Ｊ<rt>アーリー・オブ・ジャスティス</rt></ruby> リサーチャー
+  ja: <ruby>A・O・J<rt>アーリー・オブ・ジャスティス</rt></ruby> リサーチャー
   ja_romaji: Ārī obu Jasutisu Risāchā
   ko: A·O·J 리서처
   ko_rr:
