--- a/data/cards/08233522.yaml
+++ b/data/cards/08233522.yaml
@@ -7,7 +7,7 @@ name:
   fr: Araneoïde, Allié de la Justice
   it: Lettore di Ciclo Alleato della Giustizia
   pt: Aliado da Justiça Leitor de Ciclos
-  ja: <ruby>Ａ・Ｏ・Ｊ<rt>アーリー・オブ・ジャスティス</rt></ruby> サイクルリーダー
+  ja: <ruby>A・O・J<rt>アーリー・オブ・ジャスティス</rt></ruby> サイクルリーダー
   ja_romaji: Ārī Obu Jasutisu Saikuru Rīdā
   ko: A·O·J 사이클리더
   ko_rr:
