--- a/data/cards/55982698.yaml
+++ b/data/cards/55982698.yaml
@@ -7,7 +7,7 @@ name:
   fr: Foreuse Thermique, Allié de la Justice
   it: Rompitore Inverso Alleato della Giustizia
   pt: Interruptivo, Aliado da Justiça
-  ja: <ruby>Ａ・Ｏ・Ｊ<rt>アーリー・オブ・ジャスティス</rt></ruby> リバース・ブレイク
+  ja: <ruby>A・O・J<rt>アーリー・オブ・ジャスティス</rt></ruby> リバース・ブレイク
   ja_romaji: Ārī Obu Jasutisu Ribāsu Bureiku
   ko: A·O·J 리버스 브레이크
   ko_rr:
