--- a/data/cards/59712426.yaml
+++ b/data/cards/59712426.yaml
@@ -7,7 +7,7 @@ name:
   fr:
   it:
   pt:
-  ja: アルカナフォース<ruby>ⅩⅤ<rt>フィフティーン</rt></ruby>－<ruby>ＴＨＥ<rt>ザ</rt></ruby> <ruby>ＤＥＶＩＬ<rt>デビル</rt></ruby>
+  ja: アルカナフォース<ruby>ⅩⅤ<rt>フィフティーン</rt></ruby>－<ruby>ＴＨＥ ＤＥＶＩＬ<rt>ザ・デビル</rt></ruby>
   ja_romaji: Arukana Fōsu Fifutīn - Za Debiru
   ko: 아르카나 포스 XV－더 데블
   ko_rr:
