--- a/data/cards/20127343.yaml
+++ b/data/cards/20127343.yaml
@@ -7,7 +7,7 @@ name:
   fr: Changeur, Allié Genex
   it: Genex Alleato Cambiatore
   pt:
-  ja: <ruby>Ａ<rt>アーリー</rt></ruby>・ジェネクス・チェンジャー
+  ja: <ruby>A<rt>アーリー</rt></ruby>・ジェネクス・チェンジャー
   ja_romaji: Ārī Jenekusu Chenjā
   ko: A·제넥스 체인저
   ko_rr:
