--- a/data/cards/64034255.yaml
+++ b/data/cards/64034255.yaml
@@ -7,7 +7,7 @@ name:
   fr: Homme-Oiseau, Allié Genex
   it: Genex Alleato Uomo Uccello
   pt: Aliado Genex Homem-pássaro
-  ja: <ruby>Ａ<rt>アーリー</rt></ruby>・ジェネクス・バードマン
+  ja: <ruby>A<rt>アーリー</rt></ruby>・ジェネクス・バードマン
   ja_romaji: Ārī Jenekusu Bādoman
   ko: A·제넥스 버드맨
   ko_rr: Aellai Jenekseu Beodeumaen
