--- a/data/cards/82377606.yaml
+++ b/data/cards/82377606.yaml
@@ -7,7 +7,7 @@ name:
   fr: Ravitailleur Énergétique, Allié de la Justice
   it: Slimitatore Alleato della Giustizia
   pt: Deslimitador, Aliado da Justiça
-  ja: <ruby>Ａ・Ｏ・Ｊ<rt>アーリー・オブ・ジャスティス</rt></ruby> アンリミッター
+  ja: <ruby>A・O・J<rt>アーリー・オブ・ジャスティス</rt></ruby> アンリミッター
   ja_romaji: Ārī Obu Jasutisu Anrimittā
   ko: A·O·J 언리미터
   ko_rr:
@@ -27,7 +27,7 @@ text:
   pt: |-
     Você pode oferecer este card como Tributo e, depois, escolha 1 monstro "Aliado da Justiça" que você controla; o ATK do alvo se torna o dobro do seu ATK original até o final deste turno.
   ja: |-
-    このカードをリリースして発動する。自分フィールド上に表側表示で存在する「<ruby>Ａ・Ｏ・Ｊ<rt>アーリー・オブ・ジャスティス</rt></ruby>」と名のついたモンスター１体の元々の攻撃力をこのターンのエンドフェイズ時まで倍にする。
+    このカードをリリースして発動する。自分フィールド上に表側表示で存在する「<ruby>A・O・J<rt>アーリー・オブ・ジャスティス</rt></ruby>」と名のついたモンスター１体の元々の攻撃力をこのターンのエンドフェイズ時まで倍にする。
   ko: |-
     이 카드를 릴리스하고 발동한다. 자신 필드 위에 앞면 표시로 존재하는 "A·O·J"라는 이름이 붙은 몬스터 1장의 원래 공격력을 이 턴의 엔드 페이즈시까지 배로 한다.
   zh-TW: |-
