--- a/data/cards/94622638.yaml
+++ b/data/cards/94622638.yaml
@@ -7,7 +7,7 @@ name:
   fr: Cellule de Puissance, Allié Genex
   it: Genex Alleato Accumulatore
   pt:
-  ja: <ruby>Ａ<rt>アーリー</rt></ruby>・ジェネクス・パワーコール
+  ja: <ruby>A<rt>アーリー</rt></ruby>・ジェネクス・パワーコール
   ja_romaji: Ārī Jenekusu Pawākōru
   ko: A·제넥스 파워콜
   ko_rr:
