--- a/data/cards/95621257.yaml
+++ b/data/cards/95621257.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Ganha 400 de ATK enquanto você controlar um monstro "Aliado da Justiça".
   ja: |-
-    自分フィールド上に「<ruby>Ａ・Ｏ・Ｊ<rt>アーリー・オブ・ジャスティス</rt></ruby>」と名のついたモンスターが存在する限り、このカードの攻撃力は４００ポイントアップする。
+    自分フィールド上に「<ruby>A・O・J<rt>アーリー・オブ・ジャスティス</rt></ruby>」と名のついたモンスターが存在する限り、このカードの攻撃力は４００ポイントアップする。
   ko: |-
     자신 필드 위에 "A·O·J"라는 이름이 붙은 몬스터가 존재하는 한, 이 카드의 공격력은 400 포인트 올린다.
   zh-TW: |-
