--- a/data/cards/45586855.yaml
+++ b/data/cards/45586855.yaml
@@ -7,7 +7,7 @@ name:
   fr: Créateur de Cyclone, Allié de la Justice
   it: Ciclone Creatore Alleato della Giustizia
   pt:
-  ja: <ruby>A・O・J<rt>アーリー・オブ・ジャスティス</rt></ruby> サイクロン・クリエイター
+  ja: <ruby>Ａ・Ｏ・Ｊ<rt>アーリー・オブ・ジャスティス</rt></ruby> サイクロン・クリエイター
   ja_romaji: Ārī Obu Jasutisu Saikuron Kurieitā
   ko: A·O·J 싸이크론 크리에이터
   ko_rr:
