--- a/data/cards/63211608.yaml
+++ b/data/cards/63211608.yaml
@@ -7,7 +7,7 @@ name:
   fr: Revigoreur, Allié Genex
   it: Genex Alleato Soccorritore
   pt:
-  ja: <ruby>A<rt>アーリー</rt></ruby>・ジェネクス・リバイバー
+  ja: <ruby>Ａ<rt>アーリー</rt></ruby>・ジェネクス・リバイバー
   ja_romaji: Ārī Jenekusu Ribaibā
   ko: A·제넥스 리바이버
   ko_rr:
