--- a/data/cards/85876417.yaml
+++ b/data/cards/85876417.yaml
@@ -7,7 +7,7 @@ name:
   fr: Mille Bras, Allié de la Justice
   it: Mille Braccia Alleato della Giustizia
   pt:
-  ja: <ruby>A・O・J<rt>アーリー・オブ・ジャスティス</rt></ruby> サウザンド・アームズ
+  ja: <ruby>Ａ・Ｏ・Ｊ<rt>アーリー・オブ・ジャスティス</rt></ruby> サウザンド・アームズ
   ja_romaji: Ārī obu Jasutisu Sauzando Āmuzu
   ko: A·O·J 사우전드 암즈
   ko_rr:
