--- a/data/cards/27827903.yaml
+++ b/data/cards/27827903.yaml
@@ -7,7 +7,7 @@ name:
   fr: Écraseur, Allié Genex
   it: Genex Alleato Frantumatore
   pt:
-  ja: <ruby>A<rt>アーリー</rt></ruby>・ジェネクス・クラッシャー
+  ja: <ruby>Ａ<rt>アーリー</rt></ruby>・ジェネクス・クラッシャー
   ja_romaji: Ārī Jenekusu Kurasshā
   ko: A·제넥스 크러셔
   ko_rr:
