--- a/data/cards/38049541.yaml
+++ b/data/cards/38049541.yaml
@@ -7,7 +7,7 @@ name:
   fr: Chimiste, Allié Genex
   it: Genex Alleato Chimico
   pt:
-  ja: <ruby>A<rt>アーリー</rt></ruby>・ジェネクス・ケミストリ
+  ja: <ruby>Ａ<rt>アーリー</rt></ruby>・ジェネクス・ケミストリ
   ja_romaji: Ārī Jenekusu Kemisutori
   ko: A·제넥스 케미스트리
   ko_rr:
