--- a/data/cards/69461394.yaml
+++ b/data/cards/69461394.yaml
@@ -7,7 +7,7 @@ name:
   fr: Maréchal de Guerre, Allié de la Justice
   it: Maresciallo di Campo Alleato della Giustizia
   pt: Marechal de Campo, Aliado da Justiça
-  ja: <ruby>A・O・J<rt>アーリー・オブ・ジャスティス</rt></ruby> フィールド・マーシャル
+  ja: <ruby>Ａ・Ｏ・Ｊ<rt>アーリー・オブ・ジャスティス</rt></ruby> フィールド・マーシャル
   ja_romaji: Ārī Obu Jasutisu Fīrudo Māsharu
   ko: A·O·J 필드 마샬
   ko_rr:
