--- a/data/cards/kdb19932.yaml
+++ b/data/cards/kdb19932.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 19932
 password:
 name:
   en: Moon of the Closed Sky
@@ -22,7 +22,9 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    ﻿効果モンスター２体
+    このカード名の効果は１ターンに１度しか使用できない。①：このカードのリンク先の相手の表側表示モンスター１体を対象として発動できる。このターン、自分が自分フィールドのこのカードを素材としてリンク５モンスターをＬ召喚する場合、対象の相手モンスターもＬ素材にできる。
   ko:
   zh-TW:
   zh-CN:
@@ -45,7 +47,7 @@ sets:
     - Ultra Rare
 limit_regulation:
   tcg: Not yet released
-  ocg: Not yet released
+  ocg: Unlimited
 is_translation_unofficial:
   name:
     en: true
