--- a/data/cards/64599569.yaml
+++ b/data/cards/64599569.yaml
@@ -279,7 +279,7 @@ sets:
     - Normal Parallel Rare
     - Secret Rare
     - Ultimate Rare
-  - set_number: ????-JP001
+  - set_number: QCSS-JP001
     set_name: Yu-Gi-Oh! Quarter Century Summonscene Selection Blu-ray & DVD promotional card
     rarities:
     - Quarter Century Secret Rare
