--- a/data/cards/57473560.yaml
+++ b/data/cards/57473560.yaml
@@ -96,6 +96,10 @@ sets:
     set_name: Duelist Alliance
     rarities:
     - Normal Rare
+  - set_number: 24TP-JP103
+    set_name: Tournament Pack 2024 Vol.1
+    rarities:
+    - Common
   ko:
   - set_number: DUEA-KR047
     set_name: Duelist Alliance
