--- a/data/cards/70709488.yaml
+++ b/data/cards/70709488.yaml
@@ -108,6 +108,10 @@ sets:
     set_name: Promotion Pack 2019
     rarities:
     - Normal Parallel Rare
+  - set_number: 24TP-JP111
+    set_name: Tournament Pack 2024 Vol.1
+    rarities:
+    - Common
   ko:
   - set_number: PP14-KRB31
     set_name: Premium Pack Vol.14 2nd Wave
