--- a/data/cards/71768839.yaml
+++ b/data/cards/71768839.yaml
@@ -7,8 +7,8 @@ name:
   fr: E.A.E. -Espèce Alien Envahissante-
   it: A.S.I. -Alieno Specie Invasiva-
   pt: E.A.I. -Espécies Alienígenas Invasivas-
-  ja: <ruby>侵略的外来種<rt>インヴェイシブ・エーリアン・スピーシース</rt></ruby>－<ruby>Ｉ．Ａ．Ｓ<rt>アイ・アース</rt></ruby>
-  ja_romaji: Inveishibu Ērian Supīshīsu - Ai Āsu
+  ja: <ruby>侵略的外来種<rt>インヴェイシブ・エーリアン・スピーシーズ</rt></ruby>－<ruby>Ｉ．Ａ．Ｓ<rt>アイ・アース</rt></ruby>
+  ja_romaji: Inveishibu Ērian Supīshīzu - Ai Āsu
   ko: 인베이시브 에일리언 스피시즈－<ruby>I.A.S<rt>아이 아스</rt></ruby>
   ko_rr: Inbeisibeu Eillieon Seupisijeu - Ai Aseu
   zh-TW:
