--- a/data/cards/35405755.yaml
+++ b/data/cards/35405755.yaml
@@ -7,7 +7,7 @@ name:
   fr: Kurikara Divincarnée
   it: Kurikara Divincarnata
   pt: Kurikara Divincarnada
-  ja: <ruby>倶<rt>く</rt></ruby><ruby>利<rt>り</rt></ruby><ruby>伽<rt>か</rt></ruby><ruby>羅<rt>ら</rt></ruby><ruby>天<rt>てん</rt></ruby><ruby>童<rt>どう</rt></ruby>
+  ja: <ruby>俱<rt>く</rt></ruby><ruby>利<rt>り</rt></ruby><ruby>伽<rt>か</rt></ruby><ruby>羅<rt>ら</rt></ruby><ruby>天<rt>てん</rt></ruby><ruby>童<rt>どう</rt></ruby>
   ja_romaji: Kurikara Tendō
   ko: 쿠리카라천동
   ko_rr: Kurikaracheondong
