--- a/data/cards/40164421.yaml
+++ b/data/cards/40164421.yaml
@@ -73,16 +73,20 @@ sets:
     - Super Rare
   ja:
   - set_number: DS14-JPLS2
-    set_name: 'Duelist Set: Version Lightlord Judgment'
+    set_name: 'Duelist Set: Version Lightsworn Judgment'
     rarities:
     - Ultra Rare
   - set_number: LVP1-JP014
     set_name: LINK VRAINS Pack
     rarities:
     - Common
+  - set_number: 24TP-JP105
+    set_name: Tournament Pack 2024 Vol.1
+    rarities:
+    - Common
   ko:
   - set_number: DS14-KRLS2
-    set_name: 'Duelist Set: Version Lightlord Judgment'
+    set_name: 'Duelist Set: Version Lightsworn Judgment'
     rarities:
     - Ultra Rare
   - set_number: LVP1-KR014
