--- a/data/tcg-speed-skill/yugipedia716262.yaml
+++ b/data/tcg-speed-skill/yugipedia716262.yaml
@@ -11,7 +11,7 @@ name:
   ko_rr:
   zh-TW:
   zh-CN:
-type_line: Syrus / Skill
+type_line: Zane / Skill
 activation:
   en: |-
     Flip this card over when you activate this Skill.
@@ -27,7 +27,7 @@ activation:
   zh-CN:
 effect:
   en: |-
-    Activate this Skill during your Main Phase. Discard 1 card, then Fusion Summon 1 Machine Fusion Monster from your Extra Deck, using monsters from your hand or field as Fusion Material. If you do, it gains ATK equal to its original ATK until the end of this turn, but it cannot attack your opponent directly this turn. During the End Phase of this turn, you take damage equal to the amount of ATK gained at the time of the Summon.
+    Activate this Skill during your Main Phase. Discard 1 card, then Fusion Summon 1 Machine Fusion Monster from your Extra Deck, using monsters from your hand or field as material. If you do, it gains ATK equal to its original ATK until the end of this turn, but it cannot attack your opponent directly this turn. During the End Phase of this turn, you take damage equal to the amount of ATK gained at the time of the Summon.
   de: |-
     Aktiviere diese Fähigkeit während deiner Main Phase. Wirf 1 Karte ab, dann beschwöre 1 Maschine-Fusionsmonster als Fusionsbeschwörung von deinem Extra Deck und verwende dafür Monster von deiner Hand oder Spielfeldseite als Fusionsmaterial. Falls du dies tust, erhält es bis zum Ende dieses Spielzugs ATK in Höhe seiner Grund-ATK, aber es kann deinen Gegner in diesem Spielzug nicht direkt angreifen. Während der End Phase dieses Spielzugs erhältst du Schaden in Höhe der ATK, die es bei der Beschwörung erhalten hat.
   es:
@@ -38,16 +38,16 @@ effect:
   ko:
   zh-TW:
   zh-CN:
-character: Syrus Truesdale
-image_front: PowerBond-SGX2-EN-C-1E.png
-image_back: SyrusTruesdale-SkillCard-EN-Back-4.png
+character: Zane Truesdale
+image_front: PowerBond-STP6-EN-C-UE.png
+image_back: ZaneTruesdale-SkillCard-EN-Back.png
 sets:
   en:
   - set_number: SGX2-ENS08
     set_name: 'Speed Duel GX: Midterm Paradox'
     rarities:
     - Common
-  - set_number: STP6-EN005
+  - set_number: STP6-ENS05
     set_name: Speed Duel Tournament Pack 6
     rarities:
     - Common
@@ -56,7 +56,7 @@ sets:
     set_name: 'Speed Duel GX: Midterm Paradox'
     rarities:
     - Common
-  - set_number: STP6-DE005
+  - set_number: STP6-DES05
     set_name: Speed Duel Tournament Pack 6
     rarities:
     - Common
@@ -65,7 +65,7 @@ sets:
     set_name: 'Speed Duel GX: Midterm Paradox'
     rarities:
     - Common
-  - set_number: STP6-FR005
+  - set_number: STP6-FRS05
     set_name: Speed Duel Tournament Pack 6
     rarities:
     - Common
@@ -74,7 +74,7 @@ sets:
     set_name: 'Speed Duel GX: Midterm Paradox'
     rarities:
     - Common
-  - set_number: STP6-IT005
+  - set_number: STP6-ITS05
     set_name: Speed Duel Tournament Pack 6
     rarities:
     - Common
@@ -83,7 +83,7 @@ sets:
     set_name: 'Speed Duel GX: Midterm Paradox'
     rarities:
     - Common
-  - set_number: STP6-PT005
+  - set_number: STP6-PTS05
     set_name: Speed Duel Tournament Pack 6
     rarities:
     - Common
