--- a/data/cards/04130270.yaml
+++ b/data/cards/04130270.yaml
@@ -7,7 +7,7 @@ name:
   fr: Chasseresse B.G.
   it: Cacciatrice G.B.
   pt:
-  ja: <ruby>Ｇ<rt>ジー</rt></ruby>・<ruby>Ｂ<rt>ビー</rt></ruby>・ハンター
+  ja: <ruby>Ｇ・Ｂ<rt>ジービー</rt></ruby>・ハンター
   ja_romaji: Jī Bī Hantā
   ko: G·B·헌터
   ko_rr:
