--- a/data/cards/10774240.yaml
+++ b/data/cards/10774240.yaml
@@ -1,7 +1,7 @@
 konami_id: 19492
 password: 10774240
 name:
-  en: Skull Guardian, the Silenforcing Protector
+  en: Skull Guardian, the Voiceless Voice Protector
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 肃声保卫者 律守护者
 text:
   en: |-
-    You can Ritual Summon this card with "Silenforcing Prayer". Gains 2050 ATK while "Novox, the Silenforcer Disciple" is on your field or in your GY. You can only use each of the following effects of "Skull Guardian, the Silenforcing Protector" once per turn. If this card is Ritual Summoned: You can add 1 "Silenforc" monster, or 1 Warrior or Dragon Ritual Monster, from your Deck to your hand. When your opponent activates a card or effect while you control "Novox, the Silenforcer Disciple" (Quick Effect): You can negate the activation, and if you do, destroy that card.
+    You can Ritual Summon this card with "Voiceless Voice Prayer". Gains 2050 ATK while "Novox, the Voiceless Voice Disciple" is on your field or in your GY. You can only use each of the following effects of "Skull Guardian, the Voiceless Voice Protector" once per turn. If this card is Ritual Summoned: You can add 1 "Voiceless Voice" monster, or 1 Warrior or Dragon Ritual Monster, from your Deck to your hand. When your opponent activates a card or effect while you control "Novox, the Voiceless Voice Disciple" (Quick Effect): You can negate the activation, and if you do, destroy that card.
   de:
   es:
   fr:
@@ -40,14 +40,14 @@ attribute: LIGHT
 level: 7
 atk: 2050
 def: 2500
-ritual_spell: Silenforcing Prayer
+ritual_spell: Voiceless Voice Prayer
 series:
 - Guardian
 - Skull Guardian
-- Silenforc
+- Voiceless Voice
 images:
 - index: 1
-  image: SkullGuardiantheSilenforcingProtector-PHNI-JP-UR.png
+  image: SkullGuardiantheVoicelessVoiceProtector-PHNI-JP-UR.png
 sets:
   ja:
   - set_number: PHNI-JP037
