--- a/data/cards/51296484.yaml
+++ b/data/cards/51296484.yaml
@@ -1,7 +1,7 @@
 konami_id: 19475
 password: 51296484
 name:
-  en: Saffira, the Wise Silenforcer Queen
+  en: Saffira, the Wise Voiceless Voice Queen
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 肃声之龙贤姬 萨菲拉
 text:
   en: |-
-    You can discard this card; send 1 Ritual Spell from your Deck to the GY, then you can add 1 LIGHT Warrior or Dragon Ritual Monster from your Deck or GY to your hand. You can banish this card from your GY; Ritual Summon 1 LIGHT Warrior or Dragon Ritual Monster from your hand, by Tributing monsters from your hand or field whose total Levels equal or exceed the Level of the Ritual Monster you Ritual Summon. You can only use each effect of "Saffira, the Wise Silenforcer Queen" once per turn.
+    You can discard this card; send 1 Ritual Spell from your Deck to the GY, then you can add 1 LIGHT Warrior or Dragon Ritual Monster from your Deck or GY to your hand. You can banish this card from your GY; Ritual Summon 1 LIGHT Warrior or Dragon Ritual Monster from your hand, by Tributing monsters from your hand or field whose total Levels equal or exceed the Level of the Ritual Monster you Ritual Summon. You can only use each effect of "Saffira, the Wise Voiceless Voice Queen" once per turn.
   de:
   es:
   fr:
@@ -37,10 +37,10 @@ level: 6
 atk: 2500
 def: 2400
 series:
-- Silenforc
+- Voiceless Voice
 images:
 - index: 1
-  image: SaffiratheWiseSilenforcerQueen-PHNI-JP-R.png
+  image: SaffiratheWiseVoicelessVoiceQueen-PHNI-JP-R.png
 sets:
   ja:
   - set_number: PHNI-JP020
