--- a/data/cards/52472775.yaml
+++ b/data/cards/52472775.yaml
@@ -1,7 +1,7 @@
 konami_id: 19521
 password: 52472775
 name:
-  en: Silenforcing Prayer
+  en: Voiceless Voice Prayer
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 肃声祈祷
 text:
   en: |-
-    This card can be used to Ritual Summon any LIGHT Ritual Monster. You must also Tribute LIGHT monsters from your hand or field whose total Levels equal or exceed the Level of the Ritual Monster you Ritual Summon. If a face-up LIGHT Ritual Monster(s) you control leaves the field by an opponent's card effect (except during the Damage Step): You can banish this card from your GY; Special Summon 1 "Sauravis, the Ancient and Ascended", "Saffira, Queen of Dragons", or "Skull Guardian, the Silenforcing Protector" from your hand or Deck, ignoring its Summoning conditions. You can only use this effect of "Silenforcing Prayer" once per turn.
+    This card can be used to Ritual Summon any LIGHT Ritual Monster. You must also Tribute LIGHT monsters from your hand or field whose total Levels equal or exceed the Level of the Ritual Monster you Ritual Summon. If a face-up LIGHT Ritual Monster(s) you control leaves the field by an opponent's card effect (except during the Damage Step): You can banish this card from your GY; Special Summon 1 "Sauravis, the Ancient and Ascended", "Saffira, Queen of Dragons", or "Skull Guardian, the Voiceless Voice Protector" from your hand or Deck, ignoring its Summoning conditions. You can only use this effect of "Voiceless Voice Prayer" once per turn.
   de:
   es:
   fr:
@@ -33,10 +33,10 @@ text:
 card_type: Spell
 property: Ritual
 series:
-- Silenforc
+- Voiceless Voice
 images:
 - index: 1
-  image: SilenforcingPrayer-PHNI-JP-C.png
+  image: VoicelessVoicePrayer-PHNI-JP-C.png
 sets:
   ja:
   - set_number: PHNI-JP066
