--- a/data/cards/88284599.yaml
+++ b/data/cards/88284599.yaml
@@ -1,7 +1,7 @@
 konami_id: 19476
 password: 88284599
 name:
-  en: Sauravis, the Sagely Silenforcer Dragon
+  en: Sauravis, the Sagely Voiceless Voice Dragon
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 肃声之龙贤圣 萨拉维思
 text:
   en: |-
-    You can Special Summon this card (from your hand) by shuffling 2 Spells from your hand and/or GY into the Deck, including at least 1 Ritual Spell. You can only Special Summon "Sauravis, the Sagely Silenforcer Dragon" once per turn this way. When your opponent activates a card or effect (Quick Effect): You can return this card to the hand; Special Summon 1 LIGHT Warrior or Dragon Ritual Monster from your hand or Deck, but shuffle it into the Deck during the End Phase of the next turn. You can only use this effect of "Sauravis, the Sagely Silenforcer Dragon" once per turn.
+    You can Special Summon this card (from your hand) by shuffling 2 Spells from your hand and/or GY into the Deck, including at least 1 Ritual Spell. You can only Special Summon "Sauravis, the Sagely Voiceless Voice Dragon" once per turn this way. When your opponent activates a card or effect (Quick Effect): You can return this card to the hand; Special Summon 1 LIGHT Warrior or Dragon Ritual Monster from your hand or Deck, but shuffle it into the Deck during the End Phase of the next turn. You can only use this effect of "Sauravis, the Sagely Voiceless Voice Dragon" once per turn.
   de:
   es:
   fr:
@@ -37,10 +37,10 @@ level: 7
 atk: 2600
 def: 2800
 series:
-- Silenforc
+- Voiceless Voice
 images:
 - index: 1
-  image: SauravistheSagelySilenforcerDragon-PHNI-JP-C.png
+  image: SauravistheSagelyVoicelessVoiceDragon-PHNI-JP-C.png
 sets:
   ja:
   - set_number: PHNI-JP021
