--- a/data/rush/17717.yaml
+++ b/data/rush/17717.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Each player excavates the top 2 cards of their Deck. Then, they place their excavated cards on the top of their Deck in any order.
+    Each player excavates the top 2 cards of their Deck. Then, each player places their excavated cards on the top of their Deck in any order.
   de:
   es:
   fr:
