--- a/data/cards/25801745.yaml
+++ b/data/cards/25801745.yaml
@@ -1,7 +1,7 @@
 konami_id: 19474
 password: 25801745
 name:
-  en: Novox, the Silenforcer Disciple
+  en: Novox, the Voiceless Voice Disciple
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 肃声之祈祷者 律
 text:
   en: |-
-    If you Ritual Summon exactly 1 LIGHT Warrior or Dragon Ritual Monster with a card effect that requires use of monsters, this card can be used as the entire Tribute. You can only use each of the following effects of "Novox, the Silenforcer Disciple" once per turn. If this card is Normal or Special Summoned: You can place 1 "Silenforc" Continuous Spell/Trap from your Deck face-up in your Spell & Trap Zone. If a LIGHT Warrior or Dragon Ritual Monster(s) is Special Summoned to your field, while this card is in your GY (except during the Damage Step): You can Special Summon this card.
+    If you Ritual Summon exactly 1 LIGHT Warrior or Dragon Ritual Monster with a card effect that requires use of monsters, this card can be used as the entire Tribute. You can only use each of the following effects of "Novox, the Voiceless Voice Disciple" once per turn. If this card is Normal or Special Summoned: You can place 1 "Voiceless Voice" Continuous Spell/Trap from your Deck face-up in your Spell & Trap Zone. If a LIGHT Warrior or Dragon Ritual Monster(s) is Special Summoned to your field, while this card is in your GY (except during the Damage Step): You can Special Summon this card.
   de:
   es:
   fr:
@@ -38,10 +38,10 @@ level: 1
 atk: 50
 def: 2050
 series:
-- Silenforc
+- Voiceless Voice
 images:
 - index: 1
-  image: NovoxtheSilenforcerDisciple-PHNI-JP-SR.png
+  image: NovoxtheVoicelessVoiceDisciple-PHNI-JP-SR.png
 sets:
   ja:
   - set_number: PHNI-JP019
