--- a/data/cards/86310763.yaml
+++ b/data/cards/86310763.yaml
@@ -1,7 +1,7 @@
 konami_id: 19531
 password: 86310763
 name:
-  en: Silenforcing Authority
+  en: Voiceless Voice Authority
   de:
   es:
   fr:
@@ -16,9 +16,9 @@ name:
 text:
   en: |-
     During the Main Phase: You can activate 1 of these effects.
-    ● Shuffle 1 LIGHT Warrior or Dragon Ritual Monster or 1 Ritual Spell from your hand or GY into the Deck, and if you do, take 1 "Silenforc" monster from your Deck, and either add it to your hand or Special Summon it.
+    ● Shuffle 1 LIGHT Warrior or Dragon Ritual Monster or 1 Ritual Spell from your hand or GY into the Deck, and if you do, take 1 "Voiceless Voice" monster from your Deck, and either add it to your hand or Special Summon it.
     ● Target cards your opponent controls, up to the number of LIGHT Warrior and Dragon Ritual Monsters you control; destroy both them and this card.
-    You can only use this effect of "Silenforcing Authority" once per turn.
+    You can only use this effect of "Voiceless Voice Authority" once per turn.
   de:
   es:
   fr:
@@ -37,10 +37,10 @@ text:
 card_type: Trap
 property: Continuous
 series:
-- Silenforc
+- Voiceless Voice
 images:
 - index: 1
-  image: SilenforcingAuthority-PHNI-JP-C.png
+  image: VoicelessVoiceAuthority-PHNI-JP-C.png
 sets:
   ja:
   - set_number: PHNI-JP076
