--- a/data/cards/yugipedia1034528.yaml
+++ b/data/cards/yugipedia1034528.yaml
@@ -1,7 +1,7 @@
 konami_id:
 password:
 name:
-  en: Saffira, the Silenforcing Deity of Dragons
+  en: Saffira, the Voiceless Voice Deity of Dragons
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    You can Ritual Summon this card with "Silenforcing Blessing". If this card is Ritual Summoned and you have "Novox, the Silenforcer Disciple" on your field or GY: You can draw 2 cards, then discard 1 card. When an attack is declared involving a LIGHT Warrior or Dragon Ritual Monster: You can discard 1 random card from your opponent's hand. During your opponent's End Phase: You can add 1 LIGHT monster from your GY to your hand. You can only use each effect of "Saffira, the Silenforcing Deity of Dragons" once per turn.
+    You can Ritual Summon this card with "Voiceless Voice Blessing". If this card is Ritual Summoned and you have "Novox, the Voiceless Voice Disciple" on your field or GY: You can draw 2 cards, then discard 1 card. When an attack is declared involving a LIGHT Warrior or Dragon Ritual Monster: You can discard 1 random card from your opponent's hand. During your opponent's End Phase: You can add 1 LIGHT monster from your GY to your hand. You can only use each effect of "Saffira, the Voiceless Voice Deity of Dragons" once per turn.
   de:
   es:
   fr:
@@ -32,10 +32,10 @@ level: 7
 atk: 2550
 def: 2450
 series:
-- Silenforc
+- Voiceless Voice
 images:
 - index: 1
-  image: SaffiratheSilenforcingDeityofDragons-LEDE-JP-OP.png
+  image: SaffiratheVoicelessVoiceDeityofDragons-LEDE-JP-OP.png
 sets:
   ja:
   - set_number: LEDE-JP034
