--- a/data/cards/33731070.yaml
+++ b/data/cards/33731070.yaml
@@ -143,7 +143,7 @@ sets:
   - set_number: SR13-JP010
     set_name: "Structure Deck R: Devil's Gate"
     rarities:
-    - Common
+    - Normal Parallel Rare
   ko:
   - set_number: EEN-KR020
     set_name: Elemental Energy
@@ -160,7 +160,7 @@ sets:
   - set_number: SR13-KR010
     set_name: "Structure Deck R: Devil's Gate"
     rarities:
-    - Common
+    - Normal Parallel Rare
   zh-TW:
   - set_number: SD21-TC009
     set_name: "Structure Deck: Devil's Gate"
