--- a/data/series/list.yaml
+++ b/data/series/list.yaml
@@ -1270,6 +1270,18 @@
   ko_rr: Ne-oseupeiseu
   zh-TW:
   zh-CN:
+- en: Virtuous Vestals
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
 - en: Malefic
   de: Niederträchtig
   es: Malicioso/a
