--- a/data/series/map.yaml
+++ b/data/series/map.yaml
@@ -1270,6 +1270,18 @@ Neo Space:
   ko_rr: Ne-oseupeiseu
   zh-TW:
   zh-CN:
+Virtuous Vestals:
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
 Malefic:
   de: Niederträchtig
   es: Malicioso/a
