--- a/data/cards/14558127.yaml
+++ b/data/cards/14558127.yaml
@@ -390,6 +390,11 @@ sets:
     - Extra Secret Rare
     - Quarter Century Secret Rare
     - Holographic Rare
+  - set_number: QCDB-JP021
+    set_name: Quarter Century Duelist Box
+    rarities:
+    - Super Rare
+    - Secret Rare
   ko:
   - set_number: MACR-KR036
     set_name: Maximum Crisis
