--- a/data/cards/32828466.yaml
+++ b/data/cards/32828466.yaml
@@ -96,6 +96,12 @@ sets:
     - Secret Rare
     - Ultimate Rare
     - Prismatic Secret Rare
+  - set_number: QCDB-JP034
+    set_name: Quarter Century Duelist Box
+    rarities:
+    - Ultra Rare
+    - Secret Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: HC01-KR012
     set_name: History Archive Collection
