--- a/data/cards/38033121.yaml
+++ b/data/cards/38033121.yaml
@@ -70,7 +70,7 @@ images:
   image: DarkMagicianGirl-LDS3-EN-UR-1E.png
   illustration: DarkMagicianGirl-TF04-EN-VG-3-artwork.png
 - index: '3.2'
-  image: DarkMagicianGirl-DP23-JP-HGR.png
+  image: DarkMagicianGirl-QCDB-JP-UR.png
   illustration: DarkMagicianGirl-OW-6.png
 - index: 4
   image: DarkMagicianGirl-LART-EN-UR-LE-2021.png
@@ -784,6 +784,12 @@ sets:
   - set_number: WPP4-JP066
     set_name: World Premiere Pack 2023
     rarities:
+    - Quarter Century Secret Rare
+  - set_number: QCDB-JP008
+    set_name: Quarter Century Duelist Box
+    rarities:
+    - Ultra Rare
+    - Secret Rare
     - Quarter Century Secret Rare
   ko:
   - set_number: MFC-KR000
