--- a/data/cards/46986414.yaml
+++ b/data/cards/46986414.yaml
@@ -1127,6 +1127,12 @@ sets:
     set_name: Yu-Gi-Oh! Card Game x 7-Eleven Collaboration Campaign
     rarities:
     - Normal Parallel Rare
+  - set_number: QCDB-JP007
+    set_name: Quarter Century Duelist Box
+    rarities:
+    - Ultra Rare
+    - Secret Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: LOB-K005
     set_name: Legend of Blue Eyes White Dragon
