--- a/data/cards/85692042.yaml
+++ b/data/cards/85692042.yaml
@@ -58,7 +58,7 @@ text:
     Você só pode usar cada efeito de "Primechamático Alembertiano" uma vez por turno.
   ja: |-
     レベル４モンスター×２体以上
-    このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードがＸ召喚に成功した場合、このカードのＸ素材を以下の数だけ取り除き、その効果を発動できる。●２つ：デッキから「斬機」カード１枚を手札に加える。●３つ：デッキからレベル４モンスター１体を手札に加える。●４つ：デッキから魔法・罠カード１枚を手札に加える。②：自分フィールドのモンスター１体をリリースして発動できる。自分の手札・墓地からレベル４の「斬機」モンスター１体を選んで特殊召喚する。
+    このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードがＸ召喚した場合、このカードのＸ素材を以下の数だけ取り除き、その効果を発動できる。●２：デッキから「斬機」カード１枚を手札に加える。●３：デッキからレベル４モンスター１体を手札に加える。●４：デッキから魔法・罠カード１枚を手札に加える。②：自分フィールドのモンスター１体をリリースして発動できる。自分の手札・墓地からレベル４の「斬機」モンスター１体を特殊召喚する。
   ko: |-
     레벨 4 몬스터 × 2장 이상
     이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 이 카드가 엑시즈 소환에 성공했을 경우, 이 카드의 엑시즈 소재를 이하의 수만큼 제거하고, 그 효과를 발동할 수 있다.
@@ -74,12 +74,7 @@ text:
     ②：可解放我方場上的１隻怪獸發動。從我方手牌・墓地選擇１隻等級４的「斬機」怪獸特殊召喚。
   zh-CN: |-
     等级４怪兽×２只以上
-    此卡名的①②效果１回合仅可各使用１次。
-    ①：此卡超量召唤的情况下，依以下数量去除此卡的超量素材，可以发动相应效果。
-    ●２个：从牌组将１张“斩机”卡加入手牌。
-    ●３个：从牌组将１只等级４怪兽加入手牌。
-    ●４个：从牌组将１张魔法・陷阱卡加入手牌。
-    ②：解放自己场上的１只怪兽可以发动。从自己的手牌・墓地将１只等级４的“斩机”怪兽特殊召唤。
+    此卡名的①②效果１回合仅可各使用１次。①：此卡超量召唤的情况下，依以下数量去除此卡的超量素材，可以发动相应效果。●２个：从牌组将１张“斩机”卡加入手牌。●３个：从牌组将１只等级４怪兽加入手牌。●４个：从牌组将１张魔法・陷阱卡加入手牌。②：解放自己场上的１只怪兽可以发动。从自己的手牌・墓地将１只等级４的“斩机”怪兽特殊召唤。
 card_type: Monster
 monster_type_line: Cyberse / Xyz / Effect
 attribute: EARTH
@@ -145,6 +140,11 @@ sets:
   - set_number: 21PP-JP025
     set_name: Premium Pack 2021
     rarities:
+    - Secret Rare
+  - set_number: QCDB-JP041
+    set_name: Quarter Century Duelist Box
+    rarities:
+    - Super Rare
     - Secret Rare
   ko:
   - set_number: PP15-KR030
