--- a/data/cards/02347477.yaml
+++ b/data/cards/02347477.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Se um monstro Ciberso que você controla seria usado como Matéria Link para um monstro "Codificar Transmissor", este card na sua mão também pode ser usado como matéria. Se este card for enviado da mão ou do campo para o Cemitério como matéria para a Invocação-Link de um monstro "Codificar Transmissor": você pode adicionar 1 Magia/Armadilha "Cinet" do seu Deck à sua mão, ou, se este card no campo foi usado como matéria, em vez disso, você pode adicionar 1 monstro Ciberso de Nível 4. Você só pode usar cada efeito de "Micro Codificador" uma vez por turno.
   ja: |-
-    このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：自分フィールドのサイバース族モンスターを「コード・トーカー」モンスターのリンク素材とする場合、手札のこのカードもリンク素材にできる。②：このカードが「コード・トーカー」モンスターのリンク素材として手札・フィールドから墓地へ送られた場合に発動できる。デッキから「サイバネット」魔法・罠カード１枚を手札に加える。フィールドのこのカードを素材とした場合にはその１枚をサイバース族・レベル４モンスター１体にできる。
+    このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：自分フィールドのサイバース族モンスターを「コード・トーカー」モンスターのＬ素材とする場合、手札のこのカードもＬ素材にできる。②：このカードが「コード・トーカー」モンスターのＬ素材として手札・フィールドから墓地へ送られた場合に発動できる。デッキから「サイバネット」魔法・罠カード１枚を手札に加える。フィールドのこのカードを素材とした場合にはその１枚をサイバース族・レベル４モンスター１体にできる。
   ko: |-
     이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 자신 필드의 사이버스족 몬스터를 "코드 토커" 몬스터의 링크 소재로 할 경우, 패의 이 카드도 링크 소재로 할 수 있다. ②: 이 카드가 "코드 토커" 몬스터의 링크 소재로서 패 / 필드에서 묘지로 보내졌을 경우에 발동할 수 있다. 덱에서 "사이바넷" 마법 / 함정 카드 1장을 패에 넣는다. 필드의 이 카드를 소재로 했을 경우에는 그 1장을 사이버스족 / 레벨 4 몬스터 1장으로 할 수 있다.
   zh-TW: |-
@@ -110,6 +110,11 @@ sets:
     set_name: 'Structure Deck: Master Link'
     rarities:
     - Ultra Rare
+  - set_number: QCDB-JP022
+    set_name: Quarter Century Duelist Box
+    rarities:
+    - Super Rare
+    - Secret Rare
   ko:
   - set_number: SD34-KR004
     set_name: 'Structure Deck: Master Link'
