--- a/data/cards/12266229.yaml
+++ b/data/cards/12266229.yaml
@@ -27,7 +27,8 @@ text:
   pt: |-
     Você pode Invocar este card por Invocação-Ritual com "Forma do Caos". Você pode revelar este card na sua mão; adicione 1 "Mago Negro" ou 1 monstro que não seja de Ritual que o mencione, do seu Deck à sua mão e, depois, coloque 1 card da sua mão no topo do Deck. Quando seu oponente ativar um efeito de monstro (Efeito Rápido): você pode devolver este card para a mão e, se isso acontecer, Invoque por Invocação-Especial 1 "Mago Negro" do seu Cemitério e, se isso acontecer, negue esse efeito ativado. Você só pode usar cada efeito de "Ilusão do Caos" uma vez por turno.
   ja: |-
-    「カオス・フォーム」により降臨。このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：手札のこのカードを相手に見せて発動できる。儀式モンスターを除く、「ブラック・マジシャン」またはそのカード名が記されたモンスター１体をデッキから手札に加える。その後、手札を１枚選んでデッキの一番上に戻す。②：相手がモンスターの効果を発動した時に発動できる。このカードを持ち主の手札に戻し、自分の墓地から「ブラック・マジシャン」１体を選んで特殊召喚し、その発動した効果を無効にする。
+    「カオス・フォーム」により降臨
+    このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：手札のこのカードを相手に見せて発動できる。儀式モンスターを除く、「ブラック・マジシャン」またはそのカード名が記されたモンスター１体をデッキから手札に加える。その後、自分の手札を１枚選んでデッキの一番上に戻す。②：相手がモンスターの効果を発動した時に発動できる。フィールドのこのカードを手札に戻し、自分の墓地から「ブラック・マジシャン」１体を特殊召喚し、その発動した効果を無効にする。
   ko: |-
     "카오스 폼"에 의해 의식 소환. 이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 패의 이 카드를 상대에게 보여주고 발동할 수 있다. 의식 몬스터가 아닌, "블랙 매지션" 또는 그 카드명이 쓰여진 몬스터 1장을 덱에서 패에 넣는다. 그 후, 패를 1장 고르고 덱 맨 위로 되돌린다. ②: 상대가 몬스터의 효과를 발동했을 때에 발동할 수 있다. 이 카드를 주인의 패로 되돌리고, 자신 묘지에서 "블랙 매지션" 1장을 골라 특수 소환하고, 그 발동한 효과를 무효로 한다.
   zh-TW: |-
@@ -109,6 +110,12 @@ sets:
     rarities:
     - Super Rare
     - Prismatic Secret Rare
+  - set_number: QCDB-JP031
+    set_name: Quarter Century Duelist Box
+    rarities:
+    - Ultra Rare
+    - Secret Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: BACH-KR034
     set_name: Battle of Chaos
