--- a/data/cards/16889337.yaml
+++ b/data/cards/16889337.yaml
@@ -7,7 +7,7 @@ name:
   fr: Aratama
   it: Aratama
   pt: Aratama
-  ja: <ruby>荒<rt>アラ</rt></ruby><ruby>魂<rt>タマ</rt></ruby>
+  ja: <ruby>荒魂<rt>アラタマ</rt></ruby>
   ja_romaji: Aratama
   ko: 아라타마
   ko_rr:
@@ -27,7 +27,7 @@ text:
   pt: |-
     Não pode ser Invocado por Invocação-Especial. Uma vez por turno, durante a Fase Final, se este card foi Invocado por Invocação-Normal ou virado com a face para cima neste turno: devolva este card para a mão. Quando este card for Invocado por Invocação-Normal ou virado com a face para cima: você pode adicionar 1 monstro Espírito do seu Deck à sua mão, exceto "Aratama".
   ja: |-
-    このカードは特殊召喚できない。①：このカードが召喚・リバースした時に発動できる。デッキから「荒魂」以外のスピリットモンスター１体を手札に加える。②：このカードが召喚・リバースしたターンのエンドフェイズに発動する。このカードを持ち主の手札に戻す。
+    このカードは特殊召喚できない。①：このカードが召喚・リバースした時に発動できる。デッキから「荒魂」以外のスピリットモンスター１体を手札に加える。②：このカードが召喚・リバースしたターンのエンドフェイズに発動する。このカードを手札に戻す。
   ko: |-
     이 카드는 특수 소환할 수 없다. 일반 소환 / 리버스한 턴의 엔드 페이즈시에 주인의 패로 되돌아간다. 이 카드가 일반 소환 / 리버스했을 때, 덱에서 "아라타마" 이외의 스피릿 몬스터 1장을 패에 넣을 수 있다.
   zh-TW: |-
