--- a/data/cards/22850702.yaml
+++ b/data/cards/22850702.yaml
@@ -46,7 +46,7 @@ text:
     ● TREVAS: Monstros que você controla não podem ser destruídos em batalha.
   ja: |-
     チューナー＋チューナー以外の光・闇属性モンスター１体以上
-    このカードをＳ召喚する場合、自分フィールドの光・闇属性モンスター１体をチューナーとして扱う事ができる。①：このカードが特殊召喚に成功した場合、フィールドのカード１枚を対象として発動できる。そのカードを除外する。②：このカードは、このカードのＳ素材としたモンスターの元々の属性によって以下の効果を得る。●光：自分フィールドのＳモンスターは相手が発動したモンスターの効果を受けない。●闇：自分のモンスターは戦闘では破壊されない。
+    このカードをＳ召喚する場合、自分フィールドの光・闇属性モンスター１体をチューナーとして扱う事ができる。①：このカードが特殊召喚した場合、フィールドのカード１枚を対象として発動できる。そのカードを除外する。②：このカードは、このカードのＳ素材としたモンスターの元々の属性によって以下の効果を得る。●光：自分フィールドのＳモンスターは相手が発動したモンスターの効果を受けない。●闇：自分のモンスターは戦闘では破壊されない。
   ko: |-
     튜너 ＋ 튜너 이외의 빛 / 어둠 속성 몬스터 1장 이상
     이 카드를 싱크로 소환할 경우, 자신 필드의 빛 / 어둠 속성 몬스터 1장을 튜너로서 취급할 수 있다. ①: 이 카드가 특수 소환에 성공했을 경우, 필드의 카드 1장을 대상으로 하고 발동할 수 있다. 그 카드를 제외한다. ②: 이 카드는, 이 카드의 싱크로 소재로 한 몬스터의 원래의 속성에 따라 이하의 효과를 얻는다. ●빛: 자신 필드의 싱크로 몬스터는 상대가 발동한 몬스터의 효과를 받지 않는다. ●어둠: 자신 몬스터는 전투로는 파괴되지 않는다.
@@ -57,9 +57,7 @@ text:
     ●闇：我方怪獸不會因戰鬥被破壞。
   zh-CN: |-
     协调＋协调以外的光・暗属性怪兽１只以上
-    将此卡同步召唤的情况下，可将自己场上的１只光・暗属性怪兽视为协调。①：此卡特殊召唤成功的情况下，以场上的１张卡为对象可以发动。将该卡除外。②：根据作为此卡的同步素材的怪兽的原本属性，此卡获得以下效果。
-    ●光：自己场上的同步怪兽不受对手发动的怪兽效果影响。
-    ●暗：自己的怪兽不会因战斗被破坏。
+    将此卡同步召唤的情况下，可将自己场上的１只光・暗属性怪兽视为协调。①：此卡特殊召唤成功的情况下，以场上的１张卡为对象可以发动。将该卡除外。②：根据作为此卡的同步素材的怪兽的原本属性，此卡获得以下效果。●光：自己场上的同步怪兽不受对手发动的怪兽效果影响。●暗：自己的怪兽不会因战斗被破坏。
 card_type: Monster
 monster_type_line: Fiend / Synchro / Effect
 attribute: DARK
@@ -103,6 +101,12 @@ sets:
     set_name: Cyberstorm Access
     rarities:
     - Rare
+  - set_number: QCDB-JP037
+    set_name: Quarter Century Duelist Box
+    rarities:
+    - Ultra Rare
+    - Secret Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: CYAC-KR044
     set_name: Cyberstorm Access
