--- a/data/cards/27204311.yaml
+++ b/data/cards/27204311.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Durante a Fase Principal, se seu oponente Invocou 5 ou mais monstros por Invocação-Normal ou Especial neste turno (Efeito Rápido): você pode oferecer como Tributo tantos monstros com a face para cima no campo quanto possível e, se isso acontecer, Invoque este card por Invocação-Especial da sua mão e, depois, Invoque por Invocação-Especial 1 "Ficha de Ser Primitivo" (Rocha/LUZ/Nível 11/ATK ?/DEF ?) no campo do seu oponente. (O ATK/DEF dessa Ficha se tornam a soma dos respectivos ATK/DEF originais dos monstros oferecidos como Tributo.) Você só pode usar este efeito de "Nibiru, o Ser Primitivo" uma vez por turno.
   ja: |-
-    このカード名の効果は１ターンに１度しか使用できない。①：相手が５体以上のモンスターを召喚・特殊召喚したターンのメインフェイズに発動できる。自分・相手フィールドの表側表示モンスターを可能な限りリリースし、このカードを手札から特殊召喚する。その後、相手フィールドに「原始生命態トークン」（岩石族・光・星１１・攻／守？）１体を特殊召喚する。このトークンの攻撃力・守備力は、この効果でリリースしたモンスターの元々の攻撃力・守備力をそれぞれ合計した数値になる。この効果は相手ターンでも発動できる。
+    このカード名の効果は１ターンに１度しか使用できない。①：相手が５体以上のモンスターを召喚・特殊召喚した自分・相手ターンのメインフェイズに発動できる。自分・相手フィールドの表側表示モンスターを可能な限りリリースし、このカードを手札から特殊召喚する。その後、相手フィールドに「原始生命態トークン」（岩石族・光・星１１・攻／守？）１体を特殊召喚する。このトークンの攻撃力・守備力は、この効果でリリースしたモンスターの元々の攻撃力・守備力をそれぞれ合計した数値になる。
   ko: |-
     이 카드명의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 상대가 5장 이상의 몬스터를 일반 소환 / 특수 소환한 턴의 메인 페이즈에 발동할 수 있다. 자신 / 상대 필드의 앞면 표시 몬스터를 가능한 한 릴리스하고, 이 카드를 패에서 특수 소환한다. 그 후, 상대 필드에 "원시생명체 토큰"(암석족 / 빛 / 레벨 11 / 공 ? / 수 ?) 1장을 특수 소환한다. 이 토큰의 공격력 / 수비력은, 이 효과로 릴리스한 몬스터의 원래 공격력 / 수비력을 각각 합계한 수치가 된다. 이 효과는 상대 턴에도 발동할 수 있다.
   zh-TW: |-
@@ -219,6 +219,11 @@ sets:
     - Extra Secret Rare
     - Quarter Century Secret Rare
     - Holographic Rare
+  - set_number: QCDB-JP025
+    set_name: Quarter Century Duelist Box
+    rarities:
+    - Super Rare
+    - Secret Rare
   ko:
   - set_number: EP19-KR067
     set_name: Extra Pack 2019
