--- a/data/cards/30576089.yaml
+++ b/data/cards/30576089.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Outros cards que você controla não podem ser destruídos pelos efeitos de card do seu oponente. Você só pode usar cada um dos seguintes efeitos de "Dragão Jato de Olhos Azuis" uma vez por turno e só pode ativá-los enquanto "Dragão Branco de Olhos Azuis" estiver no seu campo ou no seu Cemitério. Se um ou mais cards no campo forem destruídos em batalha ou por um efeito de card: você pode Invocar este card por Invocação-Especial do Cemitério (se ele estava lá quando o card foi destruído) ou da mão (mesmo se ele não estava). No começo da Etapa de Dano, se este card batalhar: você pode escolher 1 card que seu oponente controla; devolva-o para a mão.
   ja: |-
-    このカード名の①③の効果はそれぞれ１ターンに１度しか使用できず、自分フィールドまたは自分の墓地に「青眼の白龍」が存在する場合にしか発動できない。①：このカードが手札・墓地に存在し、フィールドのカードが戦闘・効果で破壊された場合に発動できる。このカードを特殊召喚する。②：このカード以外の自分フィールドのカードは相手の効果では破壊されない。③：このカードが戦闘を行うダメージステップ開始時に、相手フィールドのカード１枚を対象として発動できる。そのカードを持ち主の手札に戻す。
+    このカード名の①③の効果は、それぞれ１ターンに１度しか使用できず、自分のフィールドか墓地に「青眼の白龍」が存在する場合にしか発動できない。①：このカードが手札・墓地に存在し、フィールドのカードが戦闘・効果で破壊された場合に発動できる。このカードを特殊召喚する。②：このカードがモンスターゾーンに存在する限り、自分フィールドの他のカードは相手の効果では破壊されない。③：このカードが戦闘を行うダメージステップ開始時、相手フィールドのカード１枚を対象として発動できる。そのカードを手札に戻す。
   ko: |-
     이 카드명의 ①③의 효과는 각각 1턴에 1번밖에 사용할 수 없으며, 자신 필드 또는 자신 묘지에 "푸른 눈의 백룡"이 존재할 경우에밖에 발동할 수 없다. ①: 이 카드가 패 / 묘지에 존재하고, 필드의 카드가 전투 / 효과로 파괴되었을 경우에 발동할 수 있다. 이 카드를 특수 소환한다. ②: 이 카드 이외의 자신 필드의 카드는 상대 효과로는 파괴되지 않는다. ③: 이 카드가 전투를 실행하는 데미지 스텝 개시시에, 상대 필드의 카드 1장을 대상으로 하고 발동할 수 있다. 그 카드를 주인의 패로 되돌린다.
   zh-TW: |-
@@ -109,6 +109,12 @@ sets:
     rarities:
     - Ultra Rare
     - Prismatic Secret Rare
+  - set_number: QCDB-JP028
+    set_name: Quarter Century Duelist Box
+    rarities:
+    - Super Rare
+    - Secret Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: BACH-KR004
     set_name: Battle of Chaos
