--- a/data/cards/30983281.yaml
+++ b/data/cards/30983281.yaml
@@ -34,7 +34,7 @@ text:
     Se este card for Invocado por Invocação-Sincro: você pode Invocar por Invocação-Especial 1 Regulador de Nível 2 ou menos do seu Cemitério. Durante a Fase Principal (Efeito Rápido): você pode oferecer este card como Tributo; Invoque por Invocação-Especial 1 "Dragão da Poeira Estelar" do seu Deck Adicional (isso é considerado uma Invocação-Sincro) e, depois, imediatamente depois que este efeito resolver, Invoque por Invocação-Sincro usando monstros que você controla como matéria. Pelo resto deste turno, os monstros Invocados por Invocação-Sincro por este efeito não são afetados pelos efeitos ativados do seu oponente. Você só pode usar cada efeito de "Dragão da Poeira Estelar Acelerador Sincro" uma vez por turno.
   ja: |-
     チューナー＋チューナー以外のモンスター１体以上
-    このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードがＳ召喚に成功した場合に発動できる。自分の墓地からレベル２以下のチューナー１体を選んで特殊召喚する。②：お互いのメインフェイズに、このカードをリリースして発動できる。ＥＸデッキから「スターダスト・ドラゴン」１体をＳ召喚扱いで特殊召喚する。その後、自分フィールドのモンスターを素材としてＳ召喚する。このターン、この効果でＳ召喚したモンスターは相手が発動した効果を受けない。
+    このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードがＳ召喚した場合に発動できる。自分の墓地からレベル２以下のチューナー１体を特殊召喚する。②：自分・相手のメインフェイズに、このカードをリリースして発動できる。ＥＸデッキから「スターダスト・ドラゴン」１体をＳ召喚扱いで特殊召喚する。その後、Ｓモンスター１体のＳ召喚を行う。この効果でＳ召喚したモンスターは、このターン相手が発動した効果を受けない。
   ko: |-
     튜너 ＋ 튜너 이외의 몬스터 1장 이상
     이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 이 카드가 싱크로 소환에 성공했을 경우에 발동할 수 있다. 자신 묘지에서 레벨 2 이하의 튜너 1장을 고르고 특수 소환한다. ②: 서로의 메인 페이즈에, 이 카드를 릴리스하고 발동할 수 있다. 엑스트라 덱에서 "스타더스트 드래곤" 1장을 싱크로 소환으로 취급하여 특수 소환한다. 그 후, 자신 필드의 몬스터를 소재로서 싱크로 소환한다. 이 턴에, 이 효과로 싱크로 소환한 몬스터는 상대가 발동한 효과를 받지 않는다.
@@ -96,6 +96,12 @@ sets:
     - Secret Rare
     - Ultimate Rare
     - Prismatic Secret Rare
+  - set_number: QCDB-JP036
+    set_name: Quarter Century Duelist Box
+    rarities:
+    - Ultra Rare
+    - Secret Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: HC01-KR022
     set_name: History Archive Collection
