--- a/data/cards/46565218.yaml
+++ b/data/cards/46565218.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Você pode Invocar este card por Invocação-Especial (da sua mão) no campo do seu oponente em Posição de Defesa, ao oferecer como Tributo 1 monstro que ele controla. Se Invocado desta forma, durante a Fase Final deste turno: você pode comprar 1 card.
   ja: |-
-    ①：このカードは相手フィールドのモンスター１体をリリースし、手札から相手フィールドに守備表示で特殊召喚できる。②：このカードがこのカードの①の方法で特殊召喚に成功したターンのエンドフェイズに発動できる。この効果を発動したプレイヤーはデッキから１枚ドローする。
+    ①：このカードは相手フィールドのモンスター１体をリリースし、手札から相手フィールドに守備表示で特殊召喚できる。②：このカードがこのカードの①の方法で特殊召喚されたターンのエンドフェイズに発動できる。自分は１枚ドローする。
   ko: |-
     ①: 이 카드는 상대 필드의 몬스터 1장을 릴리스하고, 패에서 상대 필드에 수비 표시로 특수 소환할 수 있다. ②: 이 카드가 이 카드의 ①의 방법으로 특수 소환에 성공한 턴의 엔드 페이즈에 발동할 수 있다. 이 효과를 발동한 플레이어는 덱에서 1장 드로우한다.
   zh-TW: |-
@@ -138,6 +138,11 @@ sets:
     set_name: 'Structure Deck: Masters of the Spiritual Arts'
     rarities:
     - Common
+  - set_number: QCDB-JP017
+    set_name: Quarter Century Duelist Box
+    rarities:
+    - Super Rare
+    - Secret Rare
   ko:
   - set_number: AE05-KR013
     set_name: Advanced Event Pack 2014 Vol.4
