--- a/data/cards/46772449.yaml
+++ b/data/cards/46772449.yaml
@@ -34,7 +34,7 @@ text:
     Uma vez por corrente, durante sua Fase Principal ou durante a Fase de Batalha do seu oponente, se seu oponente tiver um total maior que você de cards na mão e no campo dele (Efeito Rápido): você pode desassociar 1 matéria deste card; destrua todos os outros cards no campo e, além disso, seu oponente não sofre mais dano neste turno.
   ja: |-
     レベル４モンスター×２
-    ①：自分メインフェイズまたは相手バトルフェイズに、相手の手札・フィールドのカードを合計した数が自分の手札・フィールドのカードを合計した数より多い場合、このカードのＸ素材を１つ取り除いて発動できる。このカード以外のフィールドのカードを全て破壊する。この効果の発動後、ターン終了時まで相手が受ける全てのダメージは０になる。
+    ①：自分メインフェイズ及び相手バトルフェイズに、相手の手札・フィールドのカードの数が、自分の手札・フィールドのカードの数より多い場合、このカードのＸ素材を１つ取り除いて発動できる（同一チェーン上では１度まで）。フィールドの他のカードを全て破壊する。この効果の発動後、ターン終了時まで相手が受ける全てのダメージは０になる。
   ko: |-
     레벨 4 몬스터 × 2
     ①: 상대의 패 / 필드의 카드를 합계한 수가 자신의 패 / 필드의 카드를 합계한 수보다 많을 경우, 자신 메인 페이즈 또는 상대 배틀 페이즈에 이 카드의 엑시즈 소재를 1개 제거하고 발동할 수 있다. 이 카드 이외의 필드의 카드를 전부 파괴한다. 이 효과의 발동 후, 턴 종료시까지 상대가 받는 모든 데미지는 0 이 된다.
@@ -43,7 +43,7 @@ text:
     ①：我方主要階段或對方戰鬥階段，在對方的手牌・場上的卡合計的數量多於我方的手牌・場上的卡合計的數量的狀況下，可去除此卡的１個超量素材發動。將場上的此卡以外的所有卡全部破壞。此效果發動後，在回合結束前對方受到的所有傷害全部變為０。
   zh-CN: |-
     等级4怪兽×2
-    ①：在自己的主要阶段或对手的战斗阶段，在对手的手牌・场上的卡的总数比自己的手牌・场上的卡的总数多的情况下，去除此卡的1个超量素材后可以发动。将场上此卡以外的卡全部破坏。此效果发动后，直至回合结束时为止，对手受到的所有伤害变为0。
+    ①：在自己的主要阶段或对手的战斗阶段，在对手的手牌・场上的卡的总数比自己的手牌・场上的卡的总数多的情况下，去除此卡的１个超量素材可以发动（同一连锁上最多１次）。将场上的其他卡全部破坏。此效果发动后，直至回合结束时为止，对手受到的所有伤害变为０。
 card_type: Monster
 monster_type_line: Fiend / Xyz / Effect
 attribute: LIGHT
@@ -132,6 +132,11 @@ sets:
     rarities:
     - Gold Rare
     - Gold Secret Rare
+  - set_number: QCDB-JP038
+    set_name: Quarter Century Duelist Box
+    rarities:
+    - Super Rare
+    - Secret Rare
   ko:
   - set_number: LVAL-KR056
     set_name: Legacy of the Valiant
