--- a/data/cards/50237654.yaml
+++ b/data/cards/50237654.yaml
@@ -33,8 +33,8 @@ text:
     "Mago Negro" ou "Pequena Maga Negra" + 1 monstro Mago
     Uma vez por turno, se um Card de Magia/Armadilha ou seus efeitos forem ativados (exceto durante a Etapa de Dano): você pode comprar 1 card e, depois, se era uma Magia/Armadilha, você pode Baixá-la e, se era uma Armadilha ou Magia Rápida, você pode ativá-la neste turno. Se este card for destruído: você pode Invocar por Invocação-Especial tanto 1 "Mago Negro" quanto 1 "Pequena Maga Negra" da sua mão, do Deck e/ou do Cemitério.
   ja: |-
-    「ブラック・マジシャン」または「ブラック・マジシャン・ガール」＋魔法使い族モンスター
-    ①：１ターンに１度、魔法・罠カードの効果が発動した場合に発動できる。自分はデッキから１枚ドローする。そのドローしたカードが魔法・罠カードだった場合、自分フィールドにセットできる。速攻魔法・罠カードをセットした場合、そのカードはセットしたターンでも発動できる。②：このカードが破壊された場合に発動できる。「ブラック・マジシャン」「ブラック・マジシャン・ガール」を１体ずつ自分の手札・デッキ・墓地から選んで特殊召喚する。
+    ブラック・マジシャン」か「ブラック・マジシャン・ガール」＋魔法使い族モンスター
+    ①：１ターンに１度、魔法・罠カードの効果が発動した場合に発動できる。自分は１枚ドローする。そのドローしたカードが魔法・罠カードだった場合、自分フィールドにセットできる。速攻魔法・罠カードをセットした場合、そのカードはセットしたターンでも発動できる。②：このカードが破壊された場合に発動できる。「ブラック・マジシャン」「ブラック・マジシャン・ガール」を１体ずつ自分の手札・デッキ・墓地から特殊召喚する。
   ko: |-
     "블랙 매지션" 또는 "블랙 매지션 걸" ＋ 마법사족 몬스터
     ①: 1턴에 1번, 마법 / 함정 카드의 효과가 발동했을 경우에 발동할 수 있다. 자신은 덱에서 1장 드로우한다. 그 드로우한 카드가 마법 / 함정 카드였을 경우, 자신 필드에 세트할 수 있다. 속공 마법 / 함정 카드를 세트했을 경우, 그 카드는 세트한 턴에도 발동할 수 있다. ②: 이 카드가 파괴되었을 경우에 발동할 수 있다. "블랙 매지션" "블랙 매지션 걸"을 1장씩 자신의 패 / 덱 / 묘지에서 고르고 특수 소환한다.
@@ -42,8 +42,8 @@ text:
     「黑魔導」或「黑魔導女孩」＋魔法師族怪獸
     ①：１回合１次，可在魔法・陷阱卡效果發動的狀況下發動。我方從牌組抽１張牌。在抽到的該卡為魔法・陷阱卡的狀況下，可覆蓋在我方場上。在覆蓋速攻魔法・陷阱卡的狀況下，該卡在覆蓋的回合也可發動。②：可在此卡被破壞的狀況下發動。從我方手牌・牌組・墓地選擇「黑魔導」、「黑魔導女孩」各１隻特殊召喚。
   zh-CN: |-
-    "黑魔导"或"黑魔导女孩"＋魔法师族怪兽
-    ①：1回合1次，魔法・陷阱卡的效果发动的情况下可以发动。自己从牌组抽1张。该抽到的卡为魔法・陷阱卡的情况下，可放置在自己场上。放置的是速攻魔法・陷阱卡的情况下，该卡在放置的回合也可以发动。②：此卡被破坏的情况下可以发动。从自己的手牌・牌组・墓地挑选"黑魔导"、"黑魔导女孩"各1只，将之特殊召唤。
+    “黑魔导”或“黑魔导女孩”＋魔法师族怪兽
+    ①：1回合1次，魔法・陷阱卡的效果发动的情况下可以发动。自己从牌组抽1张。该抽到的卡为魔法・陷阱卡的情况下，可放置在自己场上。放置的是速攻魔法・陷阱卡的情况下，该卡在放置的回合也可以发动。②：此卡被破坏的情况下可以发动。从自己的手牌・牌组・墓地挑选“黑魔导”、“黑魔导女孩”各1只，将之特殊召唤。
 card_type: Monster
 monster_type_line: Spellcaster / Fusion / Effect
 attribute: DARK
@@ -128,6 +128,12 @@ sets:
     set_name: 'Duelist Pack: Legend Duelist 6'
     rarities:
     - Ultra Rare
+  - set_number: QCDB-JP033
+    set_name: Quarter Century Duelist Box
+    rarities:
+    - Ultra Rare
+    - Secret Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: DP23-KR001
     set_name: 'Duelist Pack: Legend Duelist 6'
