--- a/data/cards/53325667.yaml
+++ b/data/cards/53325667.yaml
@@ -34,7 +34,7 @@ text:
     Se este card for Invocado por Invocação-Especial: você pode adicionar 1 "Jardim Negro" do seu Deck ou Cemitério à sua mão. Você pode banir este card do seu Cemitério e, depois, escolha 1 monstro "Dragão da Rosa" ou 1 Monstro Sincro Dragão no seu Cemitério; Invoque-o por Invocação-Especial. Você só pode usar cada efeito de "Donzela da Rosa do Jardim" uma vez por turno.
   ja: |-
     チューナー＋チューナー以外のモンスター１体以上
-    このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードが特殊召喚に成功した場合に発動できる。自分のデッキ・墓地から「ブラック・ガーデン」１枚を選んで手札に加える。②：墓地のこのカードを除外し、自分の墓地の、「ローズ・ドラゴン」モンスターまたはドラゴン族Ｓモンスター１体を対象として発動できる。そのモンスターを特殊召喚する。
+    このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードが特殊召喚した場合に発動できる。自分のデッキ・墓地から「ブラック・ガーデン」１枚を手札に加える。②：墓地のこのカードを除外し、自分の墓地の、「ローズ・ドラゴン」モンスターかドラゴン族Ｓモンスター１体を対象として発動できる。そのモンスターを特殊召喚する。
   ko: |-
     튜너 ＋ 튜너 이외의 몬스터 1장 이상
     이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 이 카드가 특수 소환에 성공했을 경우에 발동할 수 있다. 자신의 덱 / 묘지에서 "블랙 가든" 1장을 고르고 패에 넣는다. ②: 묘지의 이 카드를 제외하고, 자신 묘지의, "로즈 드래곤" 몬스터 또는 드래곤족 싱크로 몬스터 1장을 대상으로 하여 발동할 수 있다. 그 몬스터를 특수 소환한다.
@@ -42,8 +42,8 @@ text:
     協調＋協調以外的怪獸１隻以上
     此卡名的①②效果，１回合各僅限使用１次。①：可在此卡特殊召喚成功的狀況下發動。從我方牌組・墓地選擇１張「漆黑花園」加入手牌。②：可將墓地的此卡除外，將我方墓地的１隻「薔薇龍」怪獸或龍族同步怪獸做為對象發動。特殊召喚該怪獸。
   zh-CN: |-
-    协调＋1只以上协调以外的怪兽
-    此卡名的①②效果1回合仅可各使用1次。①：此卡特殊召唤成功的情况下可以发动。从自己的牌组・墓地挑选1张"黑花园"加入手牌。②：将墓地的此卡除外，以自己墓地的1只"蔷薇龙"怪兽或龙族同步怪兽为对象可以发动。将该怪兽特殊召唤。
+    协调＋１只以上协调以外的怪兽
+    此卡名的①②效果１回合仅可各使用１次。①：此卡特殊召唤成功的情况下可以发动。从自己的牌组・墓地挑选１张“黑花园”加入手牌。②：将墓地的此卡除外，以自己墓地的１只“蔷薇龙”怪兽或龙族同步怪兽为对象可以发动。将该怪兽特殊召唤。
 card_type: Monster
 monster_type_line: Plant / Synchro / Effect
 attribute: DARK
@@ -108,6 +108,12 @@ sets:
     set_name: 'Duelist Pack: Legend Duelist 4'
     rarities:
     - Ultra Rare
+  - set_number: QCDB-JP035
+    set_name: Quarter Century Duelist Box
+    rarities:
+    - Super Rare
+    - Secret Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: DP21-KR023
     set_name: 'Duelist Pack: Legend Duelist 4'
