--- a/data/cards/59438930.yaml
+++ b/data/cards/59438930.yaml
@@ -33,7 +33,7 @@ text:
   zh-TW: |-
     此卡名的效果１回合僅限使用１次。①：場上的怪獸發動效果時，或場上已存在的正面表示的魔法・陷阱卡發動效果時，可將手牌・場上的此卡送至墓地發動。破壞場上的該卡。
   zh-CN: |-
-    此卡名的效果1回合仅可使用1次。①：场上的怪兽的效果发动时，或者是场上已经以表侧表示存在着的魔法・陷阱卡的效果发动时，将手牌・场上的此卡送至墓地可以发动。将该场上的卡破坏。
+    此卡名的效果１回合仅可使用１次。①：场上的怪兽的效果发动时，或者是场上已经以表侧表示存在着的魔法・陷阱卡的效果发动时，将手牌・场上的此卡送至墓地可以发动。将场上的该卡破坏。
 card_type: Monster
 monster_type_line: Psychic / Tuner / Effect
 attribute: LIGHT
@@ -297,6 +297,11 @@ sets:
     set_name: 'Structure Deck: Alba Strike'
     rarities:
     - Common
+  - set_number: QCDB-JP018
+    set_name: Quarter Century Duelist Box
+    rarities:
+    - Super Rare
+    - Secret Rare
   ko:
   - set_number: CROS-KR033
     set_name: Crossed Souls
