--- a/data/cards/67972302.yaml
+++ b/data/cards/67972302.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Não pode ser Invocado por Invocação-Especial. Uma vez por turno, durante a Fase Final, se este card foi Invocado por Invocação-Normal ou virado com a face para cima neste turno: devolva este card para a mão. Você só pode usar cada um dos seguintes efeitos de "Sakitama" uma vez por turno. Você pode revelar este card na sua mão; imediatamente depois que este efeito resolver, Invoque por Invocação-Normal 1 monstro Espírito da sua mão. Se este card for oferecido como Tributo: escolha 1 monstro Espírito no seu Cemitério; adicione-o à sua mão.
   ja: |-
-    このカードは特殊召喚できない。このカード名の①③の効果はそれぞれ１ターンに１度しか使用できない。①：手札のこのカードを相手に見せて発動できる。手札からスピリットモンスター１体を召喚する。②：このカードが召喚・リバースしたターンのエンドフェイズに発動する。このカードを持ち主の手札に戻す。③：このカードがリリースされた場合、自分の墓地のスピリットモンスター１体を対象として発動する。そのモンスターを手札に加える。
+    このカードは特殊召喚できない。このカード名の①③の効果はそれぞれ１ターンに１度しか使用できない。①：手札のこのカードを相手に見せて発動できる。手札のスピリットモンスター１体の召喚を行う。②：このカードが召喚・リバースしたターンのエンドフェイズに発動する。このカードを手札に戻す。③：このカードがリリースされた場合、自分の墓地のスピリットモンスター１体を対象として発動する。そのモンスターを手札に加える。
   ko: |-
     이 카드는 특수 소환할 수 없다. 이 카드명의 ①③의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 패의 이 카드를 상대에게 보여주고 발동할 수 있다. 패에서 스피릿 몬스터 1장을 일반 소환한다. ②: 이 카드가 일반 소환 / 리버스한 턴의 엔드 페이즈에 발동한다. 이 카드를 주인의 패로 되돌린다. ③: 이 카드가 릴리스되었을 경우, 자신 묘지의 스피릿 몬스터 1장을 대상으로 하고 발동한다. 그 몬스터를 패에 넣는다.
   zh-TW: |-
@@ -97,6 +97,8 @@ sets:
   - set_number: QCDB-JP030
     set_name: Quarter Century Duelist Box
     rarities:
+    - Super Rare
+    - Secret Rare
   ko:
   - set_number: CYAC-KR027
     set_name: Cyberstorm Access
