--- a/data/cards/71703785.yaml
+++ b/data/cards/71703785.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Quando você comprar este card: você pode revelar este card; Invoque-o por Invocação-Especial da sua mão. Se este card batalhar um monstro de TREVAS, seu ATK é dobrado, apenas durante a Etapa de Dano. Se este card for destruído em batalha ou por um efeito de card: você pode Invocar por Invocação-Especial 1 "Mago Negro" da sua mão, Deck ou Cemitério.
   ja: |-
-    ①：このカードをドローした時、このカードを相手に見せて発動できる。このカードを手札から特殊召喚する。②：このカードが闇属性モンスターと戦闘を行うダメージステップの間、このカードの攻撃力は倍になる。③：このカードが戦闘・効果で破壊された場合に発動できる。自分の手札・デッキ・墓地から「ブラック・マジシャン」１体を選んで特殊召喚する。
+    ①：このカードをドローした時、このカードを相手に見せて発動できる。このカードを手札から特殊召喚する。②：このカードが闇属性モンスターと戦闘を行うダメージステップの間、このカードの攻撃力は倍になる。③：このカードが戦闘・効果で破壊された場合に発動できる。自分の手札・デッキ・墓地から「ブラック・マジシャン」１体を特殊召喚する。
   ko: |-
     ①: 이 카드를 드로우했을 때, 이 카드를 상대에게 보여주고 발동할 수 있다. 이 카드를 패에서 특수 소환한다. ②: 이 카드가 어둠 속성 몬스터와 전투를 실행하는 데미지 스텝 동안, 이 카드의 공격력은 배가 된다. ③: 이 카드가 전투 / 효과로 파괴되었을 경우에 발동할 수 있다. 자신의 패 / 덱 / 묘지에서 "블랙 매지션" 1장을 고르고 특수 소환한다.
   zh-TW: |-
@@ -137,6 +137,12 @@ sets:
     set_name: Summer National General Yu-Gi-Oh! OCG Test promotional card
     rarities:
     - Secret Rare
+  - set_number: QCDB-JP012
+    set_name: Quarter Century Duelist Box
+    rarities:
+    - Ultra Rare
+    - Secret Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: MVPC-KR004
     set_name: Yu-Gi-Oh! The Dark Side of Dimensions Theater distribution cards
