--- a/data/cards/71818935.yaml
+++ b/data/cards/71818935.yaml
@@ -23,7 +23,7 @@ text:
   it:
   pt:
   ja: |-
-    ﻿効果モンスター２体
+    効果モンスター２体
     このカード名の効果は１ターンに１度しか使用できない。①：このカードのリンク先の相手の表側表示モンスター１体を対象として発動できる。このターン、自分が自分フィールドのこのカードを素材としてリンク５モンスターをＬ召喚する場合、対象の相手モンスターもＬ素材にできる。
   ko:
   zh-TW:
