--- a/data/cards/74677422.yaml
+++ b/data/cards/74677422.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Um dragão feroz com um ataque letal.
   ja: |-
-    <ruby>真<rt>しん</rt></ruby><ruby>紅<rt>く</rt></ruby>の<ruby>眼<rt>め</rt></ruby>を<ruby>持<rt>も</rt></ruby>つ<ruby>黒<rt>こく</rt></ruby><ruby>竜<rt>りゅう</rt></ruby>。<ruby>怒<rt>いか</rt></ruby>りの<ruby>黒<rt>くろ</rt></ruby>き<ruby>炎<rt>ほのお</rt></ruby>はその<ruby>眼<rt>め</rt></ruby>に<ruby>映<rt>うつ</rt></ruby>る<ruby>者<rt>もの</rt></ruby><ruby>全<rt>すべ</rt></ruby>てを<ruby>焼<rt>や</rt></ruby>き<ruby>尽<rt>つ</rt></ruby>くす。
+    真紅の眼を持つ黒竜。怒りの黒き炎はその眼に映る者全てを焼き尽くす。
   ko: |-
     붉은 눈을 가진 흑룡. 분노의 검은 화염은 그 눈에 비치는 자들을 모조리 불태워 버린다.
   zh-TW: |-
@@ -776,6 +776,12 @@ sets:
     set_name: History Archive Collection
     rarities:
     - Ultra Rare
+  - set_number: QCDB-JP010
+    set_name: Quarter Century Duelist Box
+    rarities:
+    - Ultra Rare
+    - Secret Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: LOB-K070
     set_name: Legend of Blue Eyes White Dragon
