--- a/data/cards/76794549.yaml
+++ b/data/cards/76794549.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Se um ou mais cards que você controla forem destruídos em batalha ou por um efeito de card: você pode Invocar este card por Invocação-Especial da sua mão e, depois, você pode selecionar 1 monstro no Cemitério, Deck Adicional ou que estiver banido, que tenha sido destruído neste turno, e adicionar 1 monstro com o mesmo nome do seu Deck à sua mão. Você pode banir este card que você controla, mais 4 monstros da sua mão, do campo e/ou do Cemitério (1 de cada com "Dragão Pêndulo", "Dragão Xyz", "Dragão Sincro" e "Dragão Fusão" em seus nomes); Invoque por Invocação-Especial 1 "Rei Supremo Z-ARC" do seu Deck Adicional. (Isso é considerado uma Invocação-Fusão.)
   ja: |-
-    ①：自分フィールドのカードが戦闘・効果で破壊された場合に発動できる。このカードを手札から特殊召喚する。その後、このターンに破壊された自分または相手のモンスター１体を選び、その同名モンスター１体をデッキから手札に加える事ができる。②：自分の手札・フィールド・墓地の、「ペンデュラム・ドラゴン」「エクシーズ・ドラゴン」「シンクロ・ドラゴン」「フュージョン・ドラゴン」モンスター１体ずつと、フィールドのこのカードを除外して発動できる。「覇王龍ズァーク」１体を融合召喚扱いとしてＥＸデッキから特殊召喚する。
+    ①：自分フィールドのカードが戦闘・効果で破壊された場合に発動できる。このカードを手札から特殊召喚する。その後、このターンに破壊された自分か相手のモンスター１体を選び、その同名モンスター１体をデッキから手札に加える事ができる。②：自分の手札・フィールド・墓地の、「ペンデュラム・ドラゴン」「エクシーズ・ドラゴン」「シンクロ・ドラゴン」「フュージョン・ドラゴン」モンスター１体ずつと、フィールドのこのカードを除外して発動できる。「覇王龍ズァーク」１体を融合召喚扱いでＥＸデッキから特殊召喚する。
   ko: |-
     ①: 자신 필드의 카드가 전투 / 효과로 파괴되었을 경우에 발동할 수 있다. 이 카드를 패에서 특수 소환한다. 그 후, 이 턴에 파괴된 자신 또는 상대의 몬스터 1장을 고르고, 그와 같은 이름의 몬스터 1장을 덱에서 패에 넣을 수 있다. ②: 자신의 패 / 필드 / 묘지의, "펜듈럼 드래곤" "엑시즈 드래곤" "싱크로 드래곤" "퓨전 드래곤" 몬스터 1장씩과, 필드의 이 카드를 제외하고 발동할 수 있다. "패왕룡 즈아크" 1장을 융합 소환으로 취급하고 엑스트라 덱에서 특수 소환한다.
   zh-TW: |-
@@ -129,6 +129,12 @@ sets:
     set_name: 'Duelist Pack: Legend Duelist 6'
     rarities:
     - Common
+  - set_number: QCDB-JP020
+    set_name: Quarter Century Duelist Box
+    rarities:
+    - Super Rare
+    - Secret Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: SD31-KR001
     set_name: 'Structure Deck: Pendulum Evolution'
