--- a/data/cards/77202120.yaml
+++ b/data/cards/77202120.yaml
@@ -83,6 +83,12 @@ sets:
     rarities:
     - Super Rare
     - Secret Rare
+  - set_number: QCDB-JP029
+    set_name: Quarter Century Duelist Box
+    rarities:
+    - Ultra Rare
+    - Secret Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: SYP1-KR097
     set_name: 'Synergy Pack 01: Syncro Acceleration'
