--- a/data/cards/81034083.yaml
+++ b/data/cards/81034083.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Quando este card for Invocado por Invocação-Normal: você pode adicionar 1 "Uria, o Senhor das Chamas Cortantes", "Hamon, o Senhor do Trovão Impactante" ou "Raviel, o Senhor dos Fantasmas", OU 1 card que liste especificamente qualquer um desses cards em seu texto, do seu Deck à sua mão, exceto "Besta do Conhecimento Negro". Você só pode usar este efeito de "Besta do Conhecimento Negro" uma vez por turno. Durante sua Fase Principal, você pode Invocar por Invocação-Normal 1 monstro Demônio com 0 de ATK/DEF em adição à sua Invocação-Normal/Baixar (padrão). (Você só pode se aproveitar deste efeito uma vez por turno.)
   ja: |-
-    このカード名の①の効果は１ターンに１度しか使用できない。①：このカードが召喚に成功した時に発動できる。「神炎皇ウリア」「降雷皇ハモン」「幻魔皇ラビエル」のいずれか１体、またはそのいずれかのカード名が記された、「暗黒の招来神」以外のカード１枚をデッキから手札に加える。②：このカードがモンスターゾーンに存在する限り、自分は通常召喚に加えて１度だけ、自分メインフェイズに攻撃力と守備力が０の悪魔族モンスター１体を召喚できる。
+    このカード名の①の効果は１ターンに１度しか使用できない。①：このカードが召喚した時に発動できる。「神炎皇ウリア」「降雷皇ハモン」「幻魔皇ラビエル」のいずれか１体、またはそのいずれかのカード名が記された、「暗黒の招来神」以外のカード１枚をデッキから手札に加える。②：このカードがモンスターゾーンに存在する限り、自分は通常召喚に加えて１度だけ、自分メインフェイズに攻撃力と守備力が０の悪魔族モンスター１体を召喚できる。
   ko: |-
     이 카드명의 ①의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 이 카드가 일반 소환에 성공했을 때에 발동할 수 있다. "신염황제 우리아" "번개황제 하몬" "환마황제 라비엘" 중 어느 1장, 또는 그 어느 카드명이 쓰여진, "암흑의 초래신" 이외의 카드 1장을 덱에서 패에 넣는다. ②: 이 카드가 몬스터 존에 존재하는 한, 자신은 통상 소환 외에도 1번만, 자신 메인 페이즈에 공격력과 수비력이 0 인 악마족 몬스터 1장을 일반 소환할 수 있다.
   zh-TW: |-
@@ -97,6 +97,8 @@ sets:
   - set_number: QCDB-JP026
     set_name: Quarter Century Duelist Box
     rarities:
+    - Super Rare
+    - Secret Rare
   ko:
   - set_number: SD38-KR003
     set_name: 'Structure Deck: Sacred Beasts of Chaos'
