--- a/data/cards/89631139.yaml
+++ b/data/cards/89631139.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Este dragão lendário é uma poderosa máquina de destruição. Praticamente invencível, muito poucos enfrentaram esta magnífica criatura e viveram para contar a história.
   ja: |-
-    <ruby>高<rt>たか</rt></ruby>い<ruby>攻<rt>こう</rt></ruby><ruby>撃<rt>げき</rt></ruby><ruby>力<rt>りょく</rt></ruby>を<ruby>誇<rt>ほこ</rt></ruby>る<ruby>伝<rt>でん</rt></ruby><ruby>説<rt>せつ</rt></ruby>のドラゴン。どんな<ruby>相<rt>あい</rt></ruby><ruby>手<rt>て</rt></ruby>でも<ruby>粉<rt>ふん</rt></ruby><ruby>砕<rt>さい</rt></ruby>する、その<ruby>破<rt>は</rt></ruby><ruby>壊<rt>かい</rt></ruby><ruby>力<rt>りょく</rt></ruby>は<ruby>計<rt>はか</rt></ruby>り<ruby>知<rt>し</rt></ruby>れない。
+    高い攻撃力を誇る伝説のドラゴン。どんな相手でも粉砕する、その破壊力は計り知れない。
   ko: |-
     높은 공격력을 자랑하는 전설의 드래곤. 어떠한 상대라도 분쇄해 버리는 파괴력은 상상을 초월한다.
   zh-TW: |-
@@ -1136,6 +1136,12 @@ sets:
     set_name: Animation Chronicle 2022
     rarities:
     - Prismatic Secret Rare
+  - set_number: QCDB-JP009
+    set_name: Quarter Century Duelist Box
+    rarities:
+    - Ultra Rare
+    - Secret Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: SDK-K001
     set_name: 'Starter Deck: Kaiba'
