--- a/data/cards/98452268.yaml
+++ b/data/cards/98452268.yaml
@@ -34,7 +34,7 @@ text:
     Você também pode Invocar este card por Invocação-Xyz ao usar um Monstro Xyz "Rebelião" que você controla como matéria. (Transfira as matérias dele para este card.) Se você puder Invocar por Invocação-Pêndulo de Nível 7, você pode Invocar este card com a face para cima do seu Deck Adicional por Invocação-Pêndulo. Este card que foi Invocado por Invocação-Xyz usando um Monstro Xyz de Classe 7 como matéria pode realizar até 3 ataques durante cada Fase de Batalha. Se este card na Zona de Monstros for destruído: você pode colocar este card na sua Zona de Pêndulo. Você só pode Invocar um ou mais "Dragão da Rebelião de Olhos Anômalos Suserano" por Invocação-Especial uma vez por turno.
   ja: |-
     レベル７モンスター×２
-    自分は「覇王黒竜オッドアイズ・リベリオン・ドラゴン－オーバーロード」を１ターンに１度しか特殊召喚できない。このカードは自分フィールドの「リベリオン」Ｘモンスターの上に重ねてＸ召喚する事もでき、レベル７がＰ召喚可能な場合にＥＸデッキの表側表示のこのカードはＰ召喚できる。①：ランク７のＸモンスターを素材としてＸ召喚したこのカードは１度のバトルフェイズ中に３回攻撃できる。②：モンスターゾーンのこのカードが破壊された場合に発動できる。このカードを自分のＰゾーンに置く。
+    自分は「覇王黒竜オッドアイズ・リベリオン・ドラゴン－オーバーロード」を１ターンに１度しか特殊召喚できない。このカードは自分フィールドの「リベリオン」Ｘモンスターの上に重ねてＸ召喚する事もでき、レベル７がＰ召喚可能な場合にＥＸデッキの表側のこのカードはＰ召喚できる。①：ランク７のＸモンスターを素材としてＸ召喚したこのカードは１度のバトルフェイズ中に３回攻撃できる。②：モンスターゾーンのこのカードが破壊された場合に発動できる。このカードを自分のＰゾーンに置く。
   ko: |-
     레벨 7 몬스터 × 2
     자신은 "패왕흑룡 오드아이즈 리벨리온 드래곤－오버로드"를 1턴에 1번밖에 특수 소환할 수 없다. 이 카드는 자신 필드의 "리벨리온" 엑시즈 몬스터의 위에 겹쳐 엑시즈 소환할 수도 있고, 레벨 7 이 펜듈럼 소환 가능한 경우에 엑스트라 덱의 앞면 표시의 이 카드는 펜듈럼 소환할 수 있다. ①: 랭크 7 의 엑시즈 몬스터를 소재로서 엑시즈 소환한 이 카드는 1번의 배틀 페이즈 중에 3회 공격할 수 있다. ②: 몬스터 존의 이 카드가 파괴되었을 경우에 발동할 수 있다. 이 카드를 자신의 펜듈럼 존에 놓는다.
@@ -43,10 +43,7 @@ text:
     我方１回合只能特殊召喚１次「霸王黑龍異色眼反叛龍－超載」。此卡另可重疊至我方場地上的「反叛」超量怪獸上方超量召喚，在可進行等級７的鐘擺召喚的狀況下，可鐘擺召喚在額外牌組正面表示的此卡。①：將階級７的超量怪獸做為素材超量召喚的此卡，在１次戰鬥階段中最多可攻擊３次。②：可在怪獸區的此卡被破壞的狀況下發動。將此卡置於我方的鐘擺區。
   zh-CN: |-
     等级７怪兽×２
-    自己１回合仅可特殊召唤１次“霸王黑龙 异色眼反叛龙－霸主”。
-    此卡也可重叠在自己场上的“反叛”超量怪兽上面来超量召唤。在可灵摆召唤等级７的情况下，额外牌组表侧的此卡可以灵摆召唤。
-    ①：以阶级７超量怪兽作为素材超量召唤的此卡在１次战斗阶段中可攻击３次。
-    ②：怪兽区域的此卡被破坏的情况下可以发动。将此卡放在自己的灵摆区域。
+    自己１回合仅可特殊召唤１次“霸王黑龙 异色眼反叛龙－霸主”。此卡也可重叠在自己场上的“反叛”超量怪兽上面来超量召唤。在可灵摆召唤等级７的情况下，额外牌组表侧的此卡可以灵摆召唤。①：以阶级７超量怪兽作为素材超量召唤的此卡在１次战斗阶段中可攻击３次。②：怪兽区域的此卡被破坏的情况下可以发动。将此卡放在自己的灵摆区域。
 card_type: Monster
 monster_type_line: Dragon / Xyz / Pendulum / Effect
 attribute: DARK
@@ -68,7 +65,7 @@ pendulum_effect:
   pt: |-
     Uma vez por turno: você pode Invocar este card por Invocação-Especial da sua Zona de Pêndulo e, depois, Invoque por Invocação-Especial do seu Deck Adicional, 1 monstro "Rebelião" ou "Os Cavaleiros Fantasmas", usando este card como matéria (isso é considerado uma Invocação-Xyz) e, depois, você pode associar 1 card da sua Zona de Pêndulo a ele como matéria.
   ja: |-
-    ①：１ターンに１度、自分メインフェイズに発動できる。Ｐゾーンのこのカードを特殊召喚し、「リベリオン」モンスターまたは「幻影騎士団」モンスター１体をこのカードの上に重ねてＸ召喚扱いとしてＥＸデッキから特殊召喚する。その後、自分のＰゾーンのカード１枚を選んでそのモンスターの下に重ねてＸ素材にできる。
+    ①：１ターンに１度、自分メインフェイズに発動できる。このカードを特殊召喚し、「リベリオン」モンスターか「幻影騎士団」モンスター１体をこのカードの上に重ねてＸ召喚扱いでＥＸデッキから特殊召喚する。その後、自分のＰゾーンのカード１枚をそのモンスターのＸ素材にできる。
   ko: |-
     ①: 1턴에 1번, 자신 메인 페이즈에 발동할 수 있다. 펜듈럼 존의 이 카드를 특수 소환하고, "리벨리온" 몬스터 또는 "팬텀 나이츠" 몬스터 1장을 이 카드의 위에 겹쳐 엑시즈 소환으로 취급하고 엑스트라 덱에서 특수 소환한다. 그 후, 자신의 펜듈럼 존의 카드 1장을 고르고 그 몬스터의 아래에 겹쳐 엑시즈 소재로 할 수 있다.
   zh-TW: |-
@@ -116,6 +113,12 @@ sets:
     rarities:
     - Ultra Rare
     - 20th Secret Rare
+  - set_number: QCDB-JP043
+    set_name: Quarter Century Duelist Box
+    rarities:
+    - Super Rare
+    - Secret Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: LGB1-KR033
     set_name: Legendary Gold Set
